Commit bilingual files

--- a/docs/visual-basic/misc/bc32072.md
+++ b/docs/visual-basic/misc/bc32072.md
@@ -1,5 +1,5 @@
 ---
-title: "インターフェイス &#39; を実装できません。&lt;interfacename1&gt;&#39;インターフェイス &#39; の実装の競合が発生する可能性があります&lt;。interfacename2&gt;&#39; いくつかの型引数"
+title: インターフェイスを実装できません&#39; &lt;interfacename1&gt; &#39;別の実装されたインターフェイスの実装の競合が発生する可能性があります&#39; &lt;interfacename2&gt;&#39;いくつかの型引数
 ms.date: 07/20/2015
 ms.prod: .net
 ms.technology:
@@ -11,19 +11,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC32072
 ms.assetid: af1cc688-c8cf-4cb2-a8a9-310f5139fe7b
-caps.latest.revision: 
+caps.latest.revision: 9
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: 179326c61ac9effcc81a1f6ab726a74fcb47503f
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.sourcegitcommit: b750a8e3979749b214e7e10c82efb0a0524dfcb1
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 04/10/2018
 ---
-# <a name="cannot-implement-interface-39ltinterfacename1gt39-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-39ltinterfacename2gt39-for-some-type-arguments"></a><span data-ttu-id="e0f5a-102">インターフェイス &#39; を実装できません。&lt;interfacename1&gt;&#39;インターフェイス &#39; の実装の競合が発生する可能性があります&lt;。interfacename2&gt;&#39; いくつかの型引数</span><span class="sxs-lookup"><span data-stu-id="e0f5a-102">Cannot implement interface &#39;&lt;interfacename1&gt;&#39; because its implementation could conflict with the implementation of another implemented interface &#39;&lt;interfacename2&gt;&#39; for some type arguments</span></span>
-<span data-ttu-id="e0f5a-103">複数のインターフェイスを指定する `Implements` ステートメントがクラス宣言に含まれていますが、少なくとも 1 つのインターフェイスはジェネリックであり、実装のうち 2 つは型引数の特定の値が競合する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-103">A class declaration includes an `Implements` statement that specifies two or more interfaces, but at least one of the interfaces is generic and two of the implementations could conflict for certain values of type arguments.</span></span>  
+# <a name="cannot-implement-interface-39ltinterfacename1gt39-because-its-implementation-could-conflict-with-the-implementation-of-another-implemented-interface-39ltinterfacename2gt39-for-some-type-arguments"></a><span data-ttu-id="a5736-102">インターフェイスを実装できません&#39; &lt;interfacename1&gt; &#39;別の実装されたインターフェイスの実装の競合が発生する可能性があります&#39; &lt;interfacename2&gt;&#39;いくつかの型引数</span><span class="sxs-lookup"><span data-stu-id="a5736-102">Cannot implement interface &#39;&lt;interfacename1&gt;&#39; because its implementation could conflict with the implementation of another implemented interface &#39;&lt;interfacename2&gt;&#39; for some type arguments</span></span>
+<span data-ttu-id="a5736-103">複数のインターフェイスを指定する `Implements` ステートメントがクラス宣言に含まれていますが、少なくとも 1 つのインターフェイスはジェネリックであり、実装のうち 2 つは型引数の特定の値が競合する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="a5736-103">A class declaration includes an `Implements` statement that specifies two or more interfaces, but at least one of the interfaces is generic and two of the implementations could conflict for certain values of type arguments.</span></span>  
   
- <span data-ttu-id="e0f5a-104">次のステートメントでは、このエラーが生成される可能性があります。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-104">The following statements can generate this error.</span></span>  
+ <span data-ttu-id="a5736-104">次のステートメントでは、このエラーが生成される可能性があります。</span><span class="sxs-lookup"><span data-stu-id="a5736-104">The following statements can generate this error.</span></span>  
   
 ```  
 Public Interface iFace1  
@@ -37,21 +37,21 @@ Public Class testClass
 End Class  
 ```  
   
- <span data-ttu-id="e0f5a-105">`iFace2` が `String`を使って作成されるため、 `testClass` はシグネチャの同じ 2 つのバージョンの `testSub` を実装する必要があります。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-105">Because `iFace2` is constructed using `String`, `testClass` must implement two versions of `testSub` with identical signatures.</span></span> <span data-ttu-id="e0f5a-106">この場合、どちらのバージョンにアクセスするかがあいまいになります。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-106">Doing so would produce an ambiguity about which version to access.</span></span>  
+ <span data-ttu-id="a5736-105">`iFace2` が `String`を使って作成されるため、 `testClass` はシグネチャの同じ 2 つのバージョンの `testSub` を実装する必要があります。</span><span class="sxs-lookup"><span data-stu-id="a5736-105">Because `iFace2` is constructed using `String`, `testClass` must implement two versions of `testSub` with identical signatures.</span></span> <span data-ttu-id="a5736-106">この場合、どちらのバージョンにアクセスするかがあいまいになります。</span><span class="sxs-lookup"><span data-stu-id="a5736-106">Doing so would produce an ambiguity about which version to access.</span></span>  
   
- <span data-ttu-id="e0f5a-107">**エラー ID:** BC32072</span><span class="sxs-lookup"><span data-stu-id="e0f5a-107">**Error ID:** BC32072</span></span>  
+ <span data-ttu-id="a5736-107">**エラー ID:** BC32072</span><span class="sxs-lookup"><span data-stu-id="a5736-107">**Error ID:** BC32072</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e0f5a-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e0f5a-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a5736-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a5736-108">To correct this error</span></span>  
   
--   <span data-ttu-id="e0f5a-109">ジェネリック インターフェイスに渡す型引数を変更して、競合が起こらないようにします。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-109">Change the type argument supplied to the generic interface so that there is no conflict.</span></span>  
+-   <span data-ttu-id="a5736-109">ジェネリック インターフェイスに渡す型引数を変更して、競合が起こらないようにします。</span><span class="sxs-lookup"><span data-stu-id="a5736-109">Change the type argument supplied to the generic interface so that there is no conflict.</span></span>  
   
-     <span data-ttu-id="e0f5a-110">または</span><span class="sxs-lookup"><span data-stu-id="e0f5a-110">-or-</span></span>  
+     <span data-ttu-id="a5736-110">- または -</span><span class="sxs-lookup"><span data-stu-id="a5736-110">-or-</span></span>  
   
--   <span data-ttu-id="e0f5a-111">実装の競合を起こすインターフェイスの 1 つを `Implements` ステートメントから削除します。</span><span class="sxs-lookup"><span data-stu-id="e0f5a-111">Remove from the `Implements` statement one of the interfaces resulting in the implementation conflict.</span></span>  
+-   <span data-ttu-id="a5736-111">実装の競合を起こすインターフェイスの 1 つを `Implements` ステートメントから削除します。</span><span class="sxs-lookup"><span data-stu-id="a5736-111">Remove from the `Implements` statement one of the interfaces resulting in the implementation conflict.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e0f5a-112">参照</span><span class="sxs-lookup"><span data-stu-id="e0f5a-112">See Also</span></span>  
- [<span data-ttu-id="e0f5a-113">Class ステートメント</span><span class="sxs-lookup"><span data-stu-id="e0f5a-113">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
- [<span data-ttu-id="e0f5a-114">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="e0f5a-114">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
- [<span data-ttu-id="e0f5a-115">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="e0f5a-115">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
+## <a name="see-also"></a><span data-ttu-id="a5736-112">関連項目</span><span class="sxs-lookup"><span data-stu-id="a5736-112">See Also</span></span>  
+ [<span data-ttu-id="a5736-113">Class ステートメント</span><span class="sxs-lookup"><span data-stu-id="a5736-113">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
+ [<span data-ttu-id="a5736-114">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="a5736-114">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
+ [<span data-ttu-id="a5736-115">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="a5736-115">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
    
- [<span data-ttu-id="e0f5a-116">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="e0f5a-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+ [<span data-ttu-id="a5736-116">Visual Basic におけるジェネリック型</span><span class="sxs-lookup"><span data-stu-id="a5736-116">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
