--- a/docs/visual-basic/misc/bc30784.md
+++ b/docs/visual-basic/misc/bc30784.md
@@ -1,36 +1,38 @@
 ---
-title: "&#39;です。続行中 &#39;です。内でのみ表示できます、&#39;です。中に &#39;です。ステートメント"
+title: '&#39;Continue While&#39;内でのみ表示できます、&#39;中&#39;ステートメント'
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc30784
 - bc30784
-helpviewer_keywords: BC30784
+helpviewer_keywords:
+- BC30784
 ms.assetid: b26c77b2-36ae-4dce-b048-f7c4b196faa4
-caps.latest.revision: "9"
+caps.latest.revision: 9
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: 71f1814c01dfb7d59b15f790829079634a2b8be9
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.sourcegitcommit: b750a8e3979749b214e7e10c82efb0a0524dfcb1
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 04/10/2018
 ---
-# <a name="39continue-while39-can-only-appear-inside-a-39while39-statement"></a><span data-ttu-id="a3db9-102">&#39;です。続行中 &#39;です。内でのみ表示できます、&#39;です。中に &#39;です。ステートメント</span><span class="sxs-lookup"><span data-stu-id="a3db9-102">&#39;Continue While&#39; can only appear inside a &#39;While&#39; statement</span></span>
-<span data-ttu-id="a3db9-103">`Continue While` ステートメントは、 `For...Next` ループ内でのみ使用できます。</span><span class="sxs-lookup"><span data-stu-id="a3db9-103">A `Continue While` statement can only appear within a `For...Next` loop.</span></span>  
+# <a name="39continue-while39-can-only-appear-inside-a-39while39-statement"></a><span data-ttu-id="dabcc-102">&#39;Continue While&#39;内でのみ表示できます、&#39;中&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="dabcc-102">&#39;Continue While&#39; can only appear inside a &#39;While&#39; statement</span></span>
+<span data-ttu-id="dabcc-103">`Continue While` ステートメントは、 `For...Next` ループ内でのみ使用できます。</span><span class="sxs-lookup"><span data-stu-id="dabcc-103">A `Continue While` statement can only appear within a `For...Next` loop.</span></span>  
   
- <span data-ttu-id="a3db9-104">**エラー ID:** BC30784</span><span class="sxs-lookup"><span data-stu-id="a3db9-104">**Error ID:** BC30784</span></span>  
+ <span data-ttu-id="dabcc-104">**エラー ID:** BC30784</span><span class="sxs-lookup"><span data-stu-id="dabcc-104">**Error ID:** BC30784</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a3db9-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a3db9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dabcc-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="dabcc-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a3db9-106">`Continue While` ステートメントが `Do...Loop` ループ内にある場合は、ステートメントを `Continue Do`に変更します。</span><span class="sxs-lookup"><span data-stu-id="a3db9-106">If the `Continue While` statement is in a `Do...Loop` loop, change the statement to `Continue Do`.</span></span>  
+1.  <span data-ttu-id="dabcc-106">`Continue While` ステートメントが `Do...Loop` ループ内にある場合は、ステートメントを `Continue Do`に変更します。</span><span class="sxs-lookup"><span data-stu-id="dabcc-106">If the `Continue While` statement is in a `Do...Loop` loop, change the statement to `Continue Do`.</span></span>  
   
-2.  <span data-ttu-id="a3db9-107">`Continue While` ステートメントが `For...Next` ループ内にある場合は、ステートメントを `Continue For`に変更します。</span><span class="sxs-lookup"><span data-stu-id="a3db9-107">If the `Continue While` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
+2.  <span data-ttu-id="dabcc-107">`Continue While` ステートメントが `For...Next` ループ内にある場合は、ステートメントを `Continue For`に変更します。</span><span class="sxs-lookup"><span data-stu-id="dabcc-107">If the `Continue While` statement is in a `For...Next` loop, change the statement to `Continue For`.</span></span>  
   
-3.  <span data-ttu-id="a3db9-108">それ以外の場合は `Continue While` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="a3db9-108">Otherwise, remove the `Continue While` statement.</span></span>  
+3.  <span data-ttu-id="dabcc-108">それ以外の場合は `Continue While` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="dabcc-108">Otherwise, remove the `Continue While` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a3db9-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="a3db9-109">See Also</span></span>  
- [<span data-ttu-id="a3db9-110">Continue ステートメント</span><span class="sxs-lookup"><span data-stu-id="a3db9-110">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)  
- [<span data-ttu-id="a3db9-111">While...End While ステートメント</span><span class="sxs-lookup"><span data-stu-id="a3db9-111">While...End While Statement</span></span>](../../visual-basic/language-reference/statements/while-end-while-statement.md)
+## <a name="see-also"></a><span data-ttu-id="dabcc-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="dabcc-109">See Also</span></span>  
+ [<span data-ttu-id="dabcc-110">Continue ステートメント</span><span class="sxs-lookup"><span data-stu-id="dabcc-110">Continue Statement</span></span>](../../visual-basic/language-reference/statements/continue-statement.md)  
+ [<span data-ttu-id="dabcc-111">While...End While ステートメント</span><span class="sxs-lookup"><span data-stu-id="dabcc-111">While...End While Statement</span></span>](../../visual-basic/language-reference/statements/while-end-while-statement.md)
