--- a/docs/visual-basic/misc/bc42101.md
+++ b/docs/visual-basic/misc/bc42101.md
@@ -8,32 +8,32 @@ ms.topic: article
 helpviewer_keywords:
 - BC42101
 ms.assetid: 001c8eaa-19b6-44fa-8056-4186ecffbda8
-caps.latest.revision: 
+caps.latest.revision: 10
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: 78758c723fbb0aeb5c51aef8c76315f758353350
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.sourcegitcommit: b750a8e3979749b214e7e10c82efb0a0524dfcb1
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 04/10/2018
 ---
-# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a><span data-ttu-id="8aa5f-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="8aa5f-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span></span>
-<span data-ttu-id="8aa5f-103">クラスの 'microsoft.visualbasic.comclassattribute'\<classname >' を暗黙的に宣言\<型 > '\<membername >'、内の同じ名前のメンバーと競合する\<型 >'\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-103">'Microsoft.VisualBasic.ComClassAttribute' on class '\<classname>' implicitly declares \<type> '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'.</span></span> <span data-ttu-id="8aa5f-104">ベース名を非表示にする場合は、'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' を使用して '\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-104">Use 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' if you want to hide the name on the base '\<typename>'.</span></span>  
+# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a><span data-ttu-id="f15e4-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="f15e4-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; on class &#39;&lt;classname&gt;&#39; implicitly declares &lt;type&gt; &#39;&lt;membername&gt;&#39;, which conflicts with a member of the same name in &lt;type&gt; &#39;&lt;typename&gt;&#39;</span></span>
+<span data-ttu-id="f15e4-103">クラスの 'microsoft.visualbasic.comclassattribute'\<classname >' を暗黙的に宣言\<型 > '\<membername >'、内の同じ名前のメンバーと競合する\<型 >'\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="f15e4-103">'Microsoft.VisualBasic.ComClassAttribute' on class '\<classname>' implicitly declares \<type> '\<membername>', which conflicts with a member of the same name in \<type> '\<typename>'.</span></span> <span data-ttu-id="f15e4-104">ベース名を非表示にする場合は、'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' を使用して '\<typename >' です。</span><span class="sxs-lookup"><span data-stu-id="f15e4-104">Use 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)' if you want to hide the name on the base '\<typename>'.</span></span>  
   
- <span data-ttu-id="8aa5f-105">クラスで `COMClassAttribute` 属性ブロックを使用して、基底クラスのメンバーと同じ名前のインターフェイスを暗黙的に定義します。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-105">A class using a `COMClassAttribute` attribute block implicitly defines an interface with the same name as a member of the base class.</span></span> <span data-ttu-id="8aa5f-106">このような場合、インターフェイス名により、基底クラスのメンバーをシャドウする必要があります。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-106">In this situation, the interface name should shadow the base class member.</span></span>  
+ <span data-ttu-id="f15e4-105">クラスで `COMClassAttribute` 属性ブロックを使用して、基底クラスのメンバーと同じ名前のインターフェイスを暗黙的に定義します。</span><span class="sxs-lookup"><span data-stu-id="f15e4-105">A class using a `COMClassAttribute` attribute block implicitly defines an interface with the same name as a member of the base class.</span></span> <span data-ttu-id="f15e4-106">このような場合、インターフェイス名により、基底クラスのメンバーをシャドウする必要があります。</span><span class="sxs-lookup"><span data-stu-id="f15e4-106">In this situation, the interface name should shadow the base class member.</span></span>  
   
- <span data-ttu-id="8aa5f-107">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-107">By default, this message is a warning.</span></span> <span data-ttu-id="8aa5f-108">警告を非表示や、警告をエラーとして扱う方法の詳細については、次を参照してください。 [Visual Basic での警告の構成](/visualstudio/ide/configuring-warnings-in-visual-basic)です。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-108">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="f15e4-107">既定では、このメッセージは警告です。</span><span class="sxs-lookup"><span data-stu-id="f15e4-107">By default, this message is a warning.</span></span> <span data-ttu-id="f15e4-108">警告を非表示や、警告をエラーとして扱う方法の詳細については、次を参照してください。 [Visual Basic での警告の構成](/visualstudio/ide/configuring-warnings-in-visual-basic)です。</span><span class="sxs-lookup"><span data-stu-id="f15e4-108">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="8aa5f-109">**エラー ID:** BC42101</span><span class="sxs-lookup"><span data-stu-id="8aa5f-109">**Error ID:** BC42101</span></span>  
+ <span data-ttu-id="f15e4-109">**エラー ID:** BC42101</span><span class="sxs-lookup"><span data-stu-id="f15e4-109">**Error ID:** BC42101</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8aa5f-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8aa5f-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f15e4-110">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f15e4-110">To correct this error</span></span>  
   
-1.  <span data-ttu-id="8aa5f-111">基底クラスのメンバーを非表示にする場合は、 `InterfaceShadows:=True` 属性ブロックで `ComClassAttribute` を設定します。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-111">If you intend to hide the base class member, set `InterfaceShadows:=True` in the `ComClassAttribute` attribute block.</span></span>  
+1.  <span data-ttu-id="f15e4-111">基底クラスのメンバーを非表示にする場合は、 `InterfaceShadows:=True` 属性ブロックで `ComClassAttribute` を設定します。</span><span class="sxs-lookup"><span data-stu-id="f15e4-111">If you intend to hide the base class member, set `InterfaceShadows:=True` in the `ComClassAttribute` attribute block.</span></span>  
   
-2.  <span data-ttu-id="8aa5f-112">基底クラスのメンバーを非表示にしない場合は、クラスの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="8aa5f-112">If you do not intend to hide the base class member, change the name of the class.</span></span>  
+2.  <span data-ttu-id="f15e4-112">基底クラスのメンバーを非表示にしない場合は、クラスの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="f15e4-112">If you do not intend to hide the base class member, change the name of the class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8aa5f-113">参照</span><span class="sxs-lookup"><span data-stu-id="8aa5f-113">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="f15e4-113">関連項目</span><span class="sxs-lookup"><span data-stu-id="f15e4-113">See Also</span></span>  
    
    
- [<span data-ttu-id="8aa5f-114">ComClassAttribute クラス</span><span class="sxs-lookup"><span data-stu-id="8aa5f-114">ComClassAttribute Class</span></span>](http://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
- [<span data-ttu-id="8aa5f-115">ComClassAttribute.InterfaceShadows プロパティ</span><span class="sxs-lookup"><span data-stu-id="8aa5f-115">ComClassAttribute.InterfaceShadows Property</span></span>](http://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
+ [<span data-ttu-id="f15e4-114">ComClassAttribute クラス</span><span class="sxs-lookup"><span data-stu-id="f15e4-114">ComClassAttribute Class</span></span>](http://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
+ [<span data-ttu-id="f15e4-115">ComClassAttribute.InterfaceShadows プロパティ</span><span class="sxs-lookup"><span data-stu-id="f15e4-115">ComClassAttribute.InterfaceShadows Property</span></span>](http://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
