--- a/docs/visual-basic/misc/bc33037.md
+++ b/docs/visual-basic/misc/bc33037.md
@@ -1,15 +1,17 @@
 ---
-title: "値 &#39; にコピーできません。ByRef &#39;パラメーター &#39;&lt;parametername&gt;&#39; 一致する引数に戻るのための種類 &#39;&lt;typename1&gt;&#39; の種類 &#39; に変換できない&lt;typename2&gt;&#39;です。"
+title: 値 &#39; にコピーできません。ByRef &#39;パラメーター &#39;&lt;parametername&gt;&#39; 一致する引数に戻るのための種類 &#39;&lt;typename1&gt;&#39; の種類 &#39; に変換できない&lt;typename2&gt;&#39;です。
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc33037
 - BC33037
-helpviewer_keywords: BC33037
+helpviewer_keywords:
+- BC33037
 ms.assetid: 3ff137e2-e062-4e54-abf5-e902e2d18968
-caps.latest.revision: "9"
+caps.latest.revision: 9
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: bce24302a33a60dbb46dc41fee54b22be2610542
