--- a/docs/visual-basic/misc/bc42018.md
+++ b/docs/visual-basic/misc/bc42018.md
@@ -1,15 +1,17 @@
 ---
-title: "演算子 &#39; に使用される Object 型のオペランド&lt;operatorsymbol&gt;&#39; を使用して、(& a) #39; が &#39; オブジェクト id をテストする演算子"
+title: '演算子 &#39; に使用される Object 型のオペランド&lt;operatorsymbol&gt;&#39; を使用して、(& a) #39; が &#39; オブジェクト id をテストする演算子'
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc42018
 - BC42018
-helpviewer_keywords: BC42018
+helpviewer_keywords:
+- BC42018
 ms.assetid: 3fc640a7-7dab-4c14-b25d-a5794dbba59d
-caps.latest.revision: "12"
+caps.latest.revision: 12
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: fcb67a3f5acdb939d9c27930bc0c438be776b9f3
