--- a/docs/visual-basic/misc/bc42032.md
+++ b/docs/visual-basic/misc/bc42032.md
@@ -1,15 +1,17 @@
 ---
-title: "演算子 &#39; に使用される Object 型のオペランド&lt;operatorsymbol&gt;&#39; を使用して、&#39; IsNot &#39; オブジェクト id をテストする演算子"
+title: 演算子 &#39; に使用される Object 型のオペランド&lt;operatorsymbol&gt;&#39; を使用して、&#39; IsNot &#39; オブジェクト id をテストする演算子
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc42032
 - bc42032
-helpviewer_keywords: BC42032
+helpviewer_keywords:
+- BC42032
 ms.assetid: f43b163b-f8f6-489d-ba9e-df6398ccc553
-caps.latest.revision: "8"
+caps.latest.revision: 8
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: a8e720a07a6b0df831e0f61f973a3e49cdd8b263
