--- a/docs/visual-basic/misc/bc42108.md
+++ b/docs/visual-basic/misc/bc42108.md
@@ -1,15 +1,17 @@
 ---
-title: "変数 &#39;&lt;variablename&gt;&#39; は、(構造体変数) の値が割り当てられる前に参照によって渡されます"
+title: 変数 &#39;&lt;variablename&gt;&#39; は、(構造体変数) の値が割り当てられる前に参照によって渡されます
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc42108
 - vbc42108
-helpviewer_keywords: BC42108
+helpviewer_keywords:
+- BC42108
 ms.assetid: 8f858dd7-db04-408e-ae67-e4ff2f0e5e30
-caps.latest.revision: "8"
+caps.latest.revision: 8
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: f9401339e546f4fb6bbf924c0f44ddccd672f743
