Commit bilingual files

--- a/docs/visual-basic/misc/bc36557.md
+++ b/docs/visual-basic/misc/bc36557.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39 です。&lt;membername&gt;&#39; メンバー &#39; にない&lt;contextname&gt;&#39; が、現在のコンテキストに存在しません'
+title: '&#39; です。&lt;membername&gt;&#39; メンバー &#39; にない&lt;contextname&gt;&#39; が、現在のコンテキストに存在しません'
 ms.date: 07/20/2015
 ms.prod: .net
 ms.technology:
@@ -20,8 +20,8 @@ ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 11/21/2017
 ---
-# <a name="39ltmembernamegt39-is-not-a-member-of-39ltcontextnamegt39-it-does-not-exist-in-the-current-context"></a><span data-ttu-id="88832-102">&#39 です。&lt;membername&gt;&#39; メンバー &#39; にない&lt;contextname&gt;&#39; が、現在のコンテキストに存在しません</span><span class="sxs-lookup"><span data-stu-id="88832-102">&#39;&lt;membername&gt;&#39; is not a member of &#39;&lt;contextname&gt;&#39;; it does not exist in the current context</span></span>
-<span data-ttu-id="88832-103">匿名型の宣言で、存在しないメンバーの名前がプロパティに割り当てられています。</span><span class="sxs-lookup"><span data-stu-id="88832-103">A non-existent member name has been assigned to a property in an anonymous type declaration.</span></span> <span data-ttu-id="88832-104">次の例では、 `.Prop1` と `.Prop2` が匿名型のプロパティです。</span><span class="sxs-lookup"><span data-stu-id="88832-104">In the following example, `.Prop1` and `.Prop2` are the properties of the anonymous type.</span></span> <span data-ttu-id="88832-105">`.Prop3` を `.Prop2` に割り当てようとすると、エラーが発生します。</span><span class="sxs-lookup"><span data-stu-id="88832-105">The attempt to assign `.Prop3` to `.Prop2` causes the error.</span></span>  
+# <a name="39ltmembernamegt39-is-not-a-member-of-39ltcontextnamegt39-it-does-not-exist-in-the-current-context"></a><span data-ttu-id="90db0-102">&#39; です。&lt;membername&gt;&#39; メンバー &#39; にない&lt;contextname&gt;&#39; が、現在のコンテキストに存在しません</span><span class="sxs-lookup"><span data-stu-id="90db0-102">&#39;&lt;membername&gt;&#39; is not a member of &#39;&lt;contextname&gt;&#39;; it does not exist in the current context</span></span>
+<span data-ttu-id="90db0-103">匿名型の宣言で、存在しないメンバーの名前がプロパティに割り当てられています。</span><span class="sxs-lookup"><span data-stu-id="90db0-103">A non-existent member name has been assigned to a property in an anonymous type declaration.</span></span> <span data-ttu-id="90db0-104">次の例では、 `.Prop1` と `.Prop2` が匿名型のプロパティです。</span><span class="sxs-lookup"><span data-stu-id="90db0-104">In the following example, `.Prop1` and `.Prop2` are the properties of the anonymous type.</span></span> <span data-ttu-id="90db0-105">`.Prop3` を `.Prop2` に割り当てようとすると、エラーが発生します。</span><span class="sxs-lookup"><span data-stu-id="90db0-105">The attempt to assign `.Prop3` to `.Prop2` causes the error.</span></span>  
   
 ```vb  
 ' Not valid.  
@@ -32,12 +32,12 @@ Dim anon1 = New With {.Prop1 = 27, .Prop2 = .Prop3}
 Dim anon2 = New With {.Prop1 = 27, .Prop2 = .Prop1}  
 ```  
   
- <span data-ttu-id="88832-106">**エラー ID:** BC36657</span><span class="sxs-lookup"><span data-stu-id="88832-106">**Error ID:** BC36657</span></span>  
+ <span data-ttu-id="90db0-106">**エラー ID:** BC36657</span><span class="sxs-lookup"><span data-stu-id="90db0-106">**Error ID:** BC36657</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="88832-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="88832-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="90db0-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="90db0-107">To correct this error</span></span>  
   
--   <span data-ttu-id="88832-108">割り当てる内容を決定するコードを調べます。</span><span class="sxs-lookup"><span data-stu-id="88832-108">Examine your code to determine what you want to assign.</span></span> <span data-ttu-id="88832-109">変数名のスペルを間違えている可能性があります。あるいは、割り当てる内容が別のオブジェクトのプロパティである場合には、修飾子が必要になることがあります。</span><span class="sxs-lookup"><span data-stu-id="88832-109">The variable name might be misspelled, or it might require qualification if it is a property of another object.</span></span>  
+-   <span data-ttu-id="90db0-108">割り当てる内容を決定するコードを調べます。</span><span class="sxs-lookup"><span data-stu-id="90db0-108">Examine your code to determine what you want to assign.</span></span> <span data-ttu-id="90db0-109">変数名のスペルを間違えている可能性があります。あるいは、割り当てる内容が別のオブジェクトのプロパティである場合には、修飾子が必要になることがあります。</span><span class="sxs-lookup"><span data-stu-id="90db0-109">The variable name might be misspelled, or it might require qualification if it is a property of another object.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="88832-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="88832-110">See Also</span></span>  
- [<span data-ttu-id="88832-111">匿名型</span><span class="sxs-lookup"><span data-stu-id="88832-111">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)  
- [<span data-ttu-id="88832-112">方法 : 匿名型の宣言におけるプロパティ名と型を推論する</span><span class="sxs-lookup"><span data-stu-id="88832-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+## <a name="see-also"></a><span data-ttu-id="90db0-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="90db0-110">See Also</span></span>  
+ [<span data-ttu-id="90db0-111">匿名型</span><span class="sxs-lookup"><span data-stu-id="90db0-111">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)  
+ [<span data-ttu-id="90db0-112">方法 : 匿名型の宣言におけるプロパティ名と型を推論する</span><span class="sxs-lookup"><span data-stu-id="90db0-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
