--- a/docs/csharp/misc/cs0077.md
+++ b/docs/csharp/misc/cs0077.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS0077"
+title: コンパイラ エラー CS0077
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0077
 helpviewer_keywords:
 - CS0077
 ms.assetid: 55d3d290-d172-41a3-b326-ebf5a0a7e81f
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3614c0770cb2f4ef5f4c0ddbaadaaf3c6c954b13
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 5d506865873bca917f04d437d3df0ff9843bda1a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs0077"></a>コンパイラ エラー CS0077
 as 演算子は参照型または null 許容型で使用してください ('int' は null 非許容の値型です)。  
