--- a/docs/csharp/misc/cs0114.md
+++ b/docs/csharp/misc/cs0114.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラの警告 (レベル 2) CS0114"
+title: コンパイラの警告 (レベル 2) CS0114
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0114
 helpviewer_keywords:
 - CS0114
 ms.assetid: 9647772b-d581-4620-981e-f9c607d4a1af
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 790637801021ba5d2a8eeec2e9829e437693b3ef
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 173465a049d3bee25126282f59f5579937286d8d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-warning-level-2-cs0114"></a>コンパイラの警告 (レベル 2) CS0114
 'function1' は継承されたメンバー 'function2' を非表示にします。 現在のメソッドでその実装をオーバーライドするには、override キーワードを追加します。 オーバーライドしない場合は、new キーワードを追加します。  
