--- a/docs/csharp/misc/cs0425.md
+++ b/docs/csharp/misc/cs0425.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS0425"
+title: コンパイラ エラー CS0425
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0425
 helpviewer_keywords:
 - CS0425
 ms.assetid: cec0391c-a641-43bc-8557-92b23f6ca685
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 38b68bbbef773eb5e7934e1b67c131029904e68a
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 3350b9cd065be252d40bf6400088d93288f74b80
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs0425"></a>コンパイラ エラー CS0425
 メソッド 'method' の型パラメーター 'type parameter' に対する制約は、インターフェイス メソッド 'method' の型パラメーター 'type parameter' に対する制約と一致しなければなりません。 明示的なインターフェイスの実装を使用することをお勧めします。  
