--- a/docs/csharp/misc/cs0742.md
+++ b/docs/csharp/misc/cs0742.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS0742"
+title: コンパイラ エラー CS0742
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0742
 helpviewer_keywords:
 - CS0742
 ms.assetid: 078ee7af-17e4-4572-8fee-d97e09c9002b
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3d06758a776241295c03862ae5922d0f03662a6c
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 57b3712f71483895249434add29f551e906d8bf2
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs0742"></a>コンパイラ エラー CS0742
 クエリ本体の後には select 句または group 句が必要です  
@@ -47,5 +40,5 @@ public class Test
   
  `group` 句で [into](../../csharp/language-reference/keywords/into.md) キーワードを使用して、一時識別子にグループ化の結果を格納する場合は、この句をクエリの最後の句にすることはできません。 `select` 句または 2 番目の `group` 句が必要です。  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [LINQ クエリ式](../../csharp/programming-guide/linq-query-expressions/index.md)
