--- a/docs/csharp/misc/cs0752.md
+++ b/docs/csharp/misc/cs0752.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS0752"
+title: コンパイラ エラー CS0752
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0752
 helpviewer_keywords:
 - CS0752
 ms.assetid: f9a373d6-31ed-42db-8206-80cbe9b8c546
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: f00d943df71ce5e3eaf0bcd8bb4ae5e2cf5d39ce
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 171a9de0e43fa71b6053554e186b363fac08eadd
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs0752"></a>コンパイラ エラー CS0752
 部分メソッドは、out パラメーターを含むことはできません  
@@ -46,5 +39,5 @@ public partial class C
 }  
 ```  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [部分クラスと部分メソッド](../../csharp/programming-guide/classes-and-structs/partial-classes-and-methods.md)
