--- a/docs/csharp/misc/cs1102.md
+++ b/docs/csharp/misc/cs1102.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS1102"
+title: コンパイラ エラー CS1102
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1102
 helpviewer_keywords:
 - CS1102
 ms.assetid: 7de798d4-1b4b-4842-ae43-9bc83e6dc9a3
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 821bfd532ad0747b23300c72af3efa87f98c9e1d
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 5c2efd32da30b3d37fcd2bee8e91aaa619c05a9d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1102"></a>コンパイラ エラー CS1102
 パラメーター修飾子 'out' は 'this' と共に使用できません  
@@ -47,7 +40,7 @@ public static class Extensions
 }  
 ```  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [拡張メソッド](../../csharp/programming-guide/classes-and-structs/extension-methods.md)  
  [this](../../csharp/language-reference/keywords/this.md)  
  [out](../../csharp/language-reference/keywords/out.md)
