--- a/docs/csharp/misc/cs1586.md
+++ b/docs/csharp/misc/cs1586.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS1586"
+title: コンパイラ エラー CS1586
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1586
 helpviewer_keywords:
 - CS1586
 ms.assetid: 408a4495-6fe6-4e95-a49f-a4d041675fff
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 5e64f90306a1aa720d29cfd840bd824931637452
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: bdc7f2fc34a413478511fb6adee6e37453330cd0
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1586"></a>コンパイラ エラー CS1586
 配列を作成するには、配列のサイズまたは配列の初期化子を指定する必要があります。  
@@ -40,5 +33,5 @@ class MyClass
 }  
 ```  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [配列](../../csharp/programming-guide/arrays/index.md)
