--- a/docs/csharp/misc/cs1589.md
+++ b/docs/csharp/misc/cs1589.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラの警告 (レベル 1) CS1589"
+title: コンパイラの警告 (レベル 1) CS1589
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1589
 helpviewer_keywords:
 - CS1589
 ms.assetid: bdc47124-93ae-4c6a-81b2-dde8ec4d0ab1
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 4d654817e58a0376048da5ab357f6dd60e6e1cbf
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 9ed26a7b00dcef99fc1361baa89e7583e0a4fe58
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-warning-level-1-cs1589"></a>コンパイラの警告 (レベル 1) CS1589
 ファイル 'file' の XML フラグメント 'fragment' を含めることができません -- 理由  
