--- a/docs/csharp/misc/cs1649.md
+++ b/docs/csharp/misc/cs1649.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS1649"
+title: コンパイラ エラー CS1649
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1649
 helpviewer_keywords:
 - CS1649
 ms.assetid: 6355c7f2-157c-441d-8925-500062988636
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 7ba8c6432c32fc2f9ad70aeacd788f9c6392336b
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 3d8952c99781194f33ee316d5fdd18584b11d07c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1649"></a>コンパイラ エラー CS1649
 読み取り専用フィールド 'identifier' のメンバーに ref または out を渡すことはできません (静的コンストラクターでは可)。  
