--- a/docs/csharp/misc/cs1928.md
+++ b/docs/csharp/misc/cs1928.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS1928"
+title: コンパイラ エラー CS1928
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1928
 helpviewer_keywords:
 - CS1928
 ms.assetid: bcc9dbef-ded5-4ddd-8c03-a9837cb6d165
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: c28b6f4b78e520904f800a35cc4fb11c426a03ae
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 5c41e234aabf009519007881ce534bba755f3b62
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1928"></a>コンパイラ エラー CS1928
 'Type' に 'method' の定義が含まれておらず、最も適している拡張メソッド オーバーロード 'method' には正しくない引数がいくつか含まれています。  
@@ -51,5 +44,5 @@ static class Ext
   
  多くの場合、このエラーは CS1503 を伴います。引数 'n': 'typeA' から 'typeB' に変換できません。  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [拡張メソッド](../../csharp/programming-guide/classes-and-structs/extension-methods.md)
