--- a/docs/csharp/misc/cs1947.md
+++ b/docs/csharp/misc/cs1947.md
@@ -1,23 +1,16 @@
 ---
-title: "コンパイラ エラー CS1947"
+title: コンパイラ エラー CS1947
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1947
 helpviewer_keywords:
 - CS1947
 ms.assetid: e2822fba-a176-4466-9cdc-63c44e22ebcb
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 06cca0a63298554b7ebaee039f2712e29a70fb11
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 62076167a7ed492ac31801f89f17e66f486d8885
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1947"></a>コンパイラ エラー CS1947
 範囲変数 'variable name' が割り当てられません -- 読み取り専用です。  
@@ -49,5 +42,5 @@ class Test
 }  
 ```  
   
-## <a name="see-also"></a>参照  
+## <a name="see-also"></a>関連項目  
  [LINQ クエリ式](../../csharp/programming-guide/linq-query-expressions/index.md)
