Commit translated content

--- a/docs/csharp/language-reference/compiler-messages/cs1548.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1548.md
@@ -1,23 +1,16 @@
 ---
 title: コンパイラ エラー CS1548
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: error-reference
 f1_keywords:
 - CS1548
 helpviewer_keywords:
 - CS1548
 ms.assetid: 63a467fa-d85f-4876-a8c9-2ae5fdebebab
-caps.latest.revision: 13
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: ee6a36dd355c2a14602806975b5a61913882ea5d
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 79adc346348a83a931c6548c4e52569c25d9a176
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1548"></a>コンパイラ エラー CS1548
 アセンブリ 'assembly' を署名しているときに暗号に失敗しました — 'reason'  
@@ -26,9 +19,9 @@ ms.lasthandoff: 10/18/2017
   
  アセンブリに完全署名するには、公開キーと秘密キーに関する情報を含む有効なキー ファイルを提供する必要があります。 アセンブリに遅延署名するには、**[遅延署名のみ]** チェック ボックスをオンにし、公開キー情報を含む有効なキー ファイルを提供する必要があります。 アセンブリに遅延署名する場合、秘密キーは必要ありません。  
   
- 詳細については、次を参照してください。[する方法: 厳密な名前でアセンブリに署名](../../../framework/app-domains/how-to-sign-an-assembly-with-a-strong-name.md)、 [/keyfile (c# コンパイラ オプション)](../../../csharp/language-reference/compiler-options/keyfile-compiler-option.md)と[/delaysign (c# コンパイラ オプション)](../../../csharp/language-reference/compiler-options/delaysign-compiler-option.md)です。  
+ 詳細については、「[方法 : 厳密な名前でアセンブリに署名する](../../../framework/app-domains/how-to-sign-an-assembly-with-a-strong-name.md)」、「[/keyfile (C# コンパイラ オプション)](../../../csharp/language-reference/compiler-options/keyfile-compiler-option.md)」、「[/delaysign (C# コンパイラ オプション)](../../../csharp/language-reference/compiler-options/delaysign-compiler-option.md)」をご覧ください。  
   
  アセンブリの作成時に、C# コンパイラは al.exe というユーティリティを呼び出します。 アセンブリの作成時にエラーが発生すると、al.exe によってエラーの原因が報告されます。 「[Al.exe ツールのエラーと警告](../../../framework/tools/al-exe-assembly-linker.md#errors-and-warnings)」で、コンパイラによって 'reason' に報告されるテキストの該当トピックを検索してください。  
   
-## <a name="see-also"></a>関連項目  
+## <a name="see-also"></a>参照  
  [方法: 厳密な名前でアセンブリに署名する](../../../framework/app-domains/how-to-sign-an-assembly-with-a-strong-name.md)
