--- a/docs/csharp/language-reference/compiler-messages/cs3009.md
+++ b/docs/csharp/language-reference/compiler-messages/cs3009.md
@@ -1,28 +1,21 @@
 ---
 title: コンパイラの警告 (レベル 1) CS3009
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: error-reference
 f1_keywords:
 - CS3009
 helpviewer_keywords:
 - CS3009
 ms.assetid: 41a1d2c4-d558-4066-8f3f-e9d2d69298a8
-caps.latest.revision: 8
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 6a73681e43bef94c091f8eb6a60d8ed76c54d3d8
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 8d9a6e7158147fce33bea4f339c852f0b8116ca2
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-warning-level-1-cs3009"></a>コンパイラの警告 (レベル 1) CS3009
 'type': 基本型 'type' は CLS に準拠していません  
   
- 共通言語仕様 (CLS) 準拠としてマークされているアセンブリで、基本型に CLS 準拠不要のマークが付けられました。 アセンブリが CLS 準拠であることを指定する属性を削除するか、または型が CLS 準拠でないことを示す属性を削除してください。 CLS 準拠の詳細については、次を参照してください。 [CLS 準拠の規則](../../../standard/language-independence-and-language-independent-components.md#cls-compliance-rules)と[言語非依存および言語非依存コンポーネント](../../../standard/language-independence.md)です。  
+ 共通言語仕様 (CLS) 準拠としてマークされているアセンブリで、基本型に CLS 準拠不要のマークが付けられました。 アセンブリが CLS 準拠であることを指定する属性を削除するか、または型が CLS 準拠でないことを示す属性を削除してください。 CLS 準拠について詳しくは、「[CLS 準拠の規則](../../../standard/language-independence-and-language-independent-components.md#cls-compliance-rules)」および「[言語への非依存性、および言語非依存コンポーネント](../../../standard/language-independence.md)」をご覧ください。  
   
 ## <a name="example"></a>例  
  次の例では CS3009 が生成されます。  
