--- a/docs/csharp/language-reference/compiler-messages/cs1721.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1721.md
@@ -1,23 +1,16 @@
 ---
 title: コンパイラ エラー CS1721
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: error-reference
 f1_keywords:
 - CS1721
 helpviewer_keywords:
 - CS1721
 ms.assetid: f02dc9b1-8e38-4562-b013-4d752ad79061
-caps.latest.revision: 12
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 346c32924805e638065c5e21ccc95fd882789139
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: f5582e295214801995382e080eb9e01a8b07a6b2
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
 ---
 # <a name="compiler-error-cs1721"></a>コンパイラ エラー CS1721
 クラス 'class' に複数の基本クラスを指定することはできません: 'class_1' および 'class_2'  
@@ -25,7 +18,7 @@ ms.lasthandoff: 11/21/2017
  このエラー メッセージの最も一般的な原因としては、多重継承の使用があります。 C# のクラスは 1 つのクラスから直接継承することしかできません。 ただし、1 つのクラスは任意の数のインターフェイスを実装できます。  
   
 ## <a name="example"></a>例  
- 次の例は、1 つの方法で CS1721 が生成され、エラーを回避する方法は 2 つを示します。  
+ 次の例では、CS1721 が発生する状況を 1 つ示した後で、このエラーを回避するための方法を 2 つ示します。  
   
 ```csharp  
 // CS1721.cs  
@@ -44,6 +37,6 @@ public interface B {}
 public class C : A, B {}  
 ```  
   
-## <a name="see-also"></a>関連項目  
+## <a name="see-also"></a>参照  
  [ポリモーフィズム](../../../csharp/programming-guide/classes-and-structs/polymorphism.md)  
  [インターフェイス](../../../csharp/programming-guide/interfaces/index.md)
