--- a/docs/csharp/language-reference/compiler-messages/cs7003.md
+++ b/docs/csharp/language-reference/compiler-messages/cs7003.md
@@ -1,14 +1,28 @@
+---
+title: コンパイラ エラー CS7003
+ms.date: 11/05/2017
+f1_keywords:
+- CS7003
+helpviewer_keywords:
+- CS7003
+author: sputier
+ms.openlocfilehash: 41c1b6f3751028ea1908965531a8587f93850a82
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
+ms.contentlocale: ja-JP
+ms.lasthandoff: 05/04/2018
+---
 # <a name="compiler-error-cs7003"></a>コンパイラ エラー CS7003
-バインドされていないジェネリック名の予期しない使用方法
+バインドされていないジェネリック名の予期しない使用方法です
 
-1 つのパラメーターを必要とするジェネリック型を使用する場合、このエラーが発生した、山かっこの間で、ジェネリック パラメーターの型名を渡すことがない型をします。 このように使用するには、変数の宣言、またはオブジェクト インスタンスがあります。
+このエラーは、パラメーターの型を 1 つ必要とするジェネリック型を使用する際に、山かっこの間でジェネリック パラメーターの型の名前を指定しなかった場合に発生します。 変数の宣言やオブジェクトのインスタンス化においてこのような使い方をする場合があります。
 
 ## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
-ジェネリック型を使用する場合は、山かっこ内の 1 つのパラメーターの型名を提供します。  
+ジェネリック型を使用する場合は、山かっこの間でパラメーターの型の名前を 1 つ指定します。  
 
  ## <a name="example"></a>例  
- 次の例では、CS7003 が生成されます。  
+ 次の例では CS7003 が生成されます。  
   
 ```csharp  
 // CS7003.cs  
@@ -25,5 +39,5 @@
     public class MyGenericClass<T> { }
 ```
 
-## <a name="see-also"></a>関連項目  
+## <a name="see-also"></a>参照  
  [ジェネリック](../../../csharp/programming-guide/generics/generic-type-parameters.md)   
