--- a/docs/csharp/misc/cs0278.md
+++ b/docs/csharp/misc/cs0278.md
@@ -6,20 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - CS0278
 ms.assetid: 5418cbbe-bcec-4379-a6f6-410987beb96a
-ms.openlocfilehash: 8ce52993c3ba4a412c8c86b0a0b9696975c319d5
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 48f8228520d02d7f2000d3d0b508b1b48c38c37e
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
 ---
 # <a name="compiler-warning-level-2-cs0278"></a>コンパイラの警告 (レベル 2) CS0278
 'type' は、'pattern name' パターンを実装しません。 'method name' があいまいなため、'method name' と混同します。  
   
- C# には、 `foreach` や `using`など、あらかじめ定義されたパターンを使用するステートメントがいくつかあります。 たとえば、 `foreach` には、"列挙可能な" パターンを実装したコレクション クラスが使用されます。  
+C# には、 `foreach` や `using`など、あらかじめ定義されたパターンを使用するステートメントがいくつかあります。 たとえば、 [ `foreach`ステートメント](../language-reference/keywords/foreach-in.md)「列挙可能な」パターンを実装したコレクション クラスに依存しています。
   
- CS0278 は、あいまいな部分があるために、コンパイラが適切な仲介処理を実行できない場合に発生する可能性があります。 たとえば、"列挙可能な" パターンを処理するためには、 `MoveNext`というメソッドが必要ですが、コンパイルの対象になるコードには、 `MoveNext`メソッドが 2 つ存在している可能性があります。 コンパイラは、どちらのインターフェイスを使用するかについて検索を試行しますが、あいまいさの原因を突き止め、解決することをお勧めします。  
-  
- 詳細については、「[方法 : foreach を使用してコレクション クラスにアクセスする](../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md)」を参照してください。  
+CS0278 は、あいまいな部分があるために、コンパイラが適切な仲介処理を実行できない場合に発生する可能性があります。 たとえば、"列挙可能な" パターンを処理するためには、 `MoveNext`というメソッドが必要ですが、コンパイルの対象になるコードには、 `MoveNext`メソッドが 2 つ存在している可能性があります。 コンパイラは、どちらのインターフェイスを使用するかについて検索を試行しますが、あいまいさの原因を突き止め、解決することをお勧めします。  
   
 ## <a name="example"></a>例  
  次の例では CS0278 が生成されます。  
