Commit bilingual files

--- a/docs/csharp/misc/cs0278.md
+++ b/docs/csharp/misc/cs0278.md
@@ -1,35 +1,26 @@
 ---
-title: "コンパイラの警告 (レベル 2) CS0278"
+title: コンパイラの警告 (レベル 2) CS0278
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0278
 helpviewer_keywords:
 - CS0278
 ms.assetid: 5418cbbe-bcec-4379-a6f6-410987beb96a
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 9c87e6387d9a9df4d9c6e7933bb4ca869dc525f4
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 48f8228520d02d7f2000d3d0b508b1b48c38c37e
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/25/2018
 ---
-# <a name="compiler-warning-level-2-cs0278"></a><span data-ttu-id="75ba7-102">コンパイラの警告 (レベル 2) CS0278</span><span class="sxs-lookup"><span data-stu-id="75ba7-102">Compiler Warning (level 2) CS0278</span></span>
-<span data-ttu-id="75ba7-103">'type' は、'pattern name' パターンを実装しません。</span><span class="sxs-lookup"><span data-stu-id="75ba7-103">'type' does not implement the 'pattern name' pattern.</span></span> <span data-ttu-id="75ba7-104">'method name' があいまいなため、'method name' と混同します。</span><span class="sxs-lookup"><span data-stu-id="75ba7-104">'method name' is ambiguous with 'method name'.</span></span>  
+# <a name="compiler-warning-level-2-cs0278"></a><span data-ttu-id="0e6ec-102">コンパイラの警告 (レベル 2) CS0278</span><span class="sxs-lookup"><span data-stu-id="0e6ec-102">Compiler Warning (level 2) CS0278</span></span>
+<span data-ttu-id="0e6ec-103">'type' は、'pattern name' パターンを実装しません。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-103">'type' does not implement the 'pattern name' pattern.</span></span> <span data-ttu-id="0e6ec-104">'method name' があいまいなため、'method name' と混同します。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-104">'method name' is ambiguous with 'method name'.</span></span>  
   
- <span data-ttu-id="75ba7-105">C# には、 `foreach` や `using`など、あらかじめ定義されたパターンを使用するステートメントがいくつかあります。</span><span class="sxs-lookup"><span data-stu-id="75ba7-105">There are several statements in C# that rely on defined patterns, such as `foreach` and `using`.</span></span> <span data-ttu-id="75ba7-106">たとえば、 `foreach` には、"列挙可能な" パターンを実装したコレクション クラスが使用されます。</span><span class="sxs-lookup"><span data-stu-id="75ba7-106">For example, `foreach` relies on the collection class implementing the "enumerable" pattern.</span></span>  
+<span data-ttu-id="0e6ec-105">C# には、 `foreach` や `using`など、あらかじめ定義されたパターンを使用するステートメントがいくつかあります。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-105">There are several statements in C# that rely on defined patterns, such as `foreach` and `using`.</span></span> <span data-ttu-id="0e6ec-106">たとえば、 [ `foreach`ステートメント](../language-reference/keywords/foreach-in.md)「列挙可能な」パターンを実装したコレクション クラスに依存しています。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-106">For example, the [`foreach` statement](../language-reference/keywords/foreach-in.md) relies on the collection class implementing the "enumerable" pattern.</span></span>
   
- <span data-ttu-id="75ba7-107">CS0278 は、あいまいな部分があるために、コンパイラが適切な仲介処理を実行できない場合に発生する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="75ba7-107">CS0278 can occur if the compiler is unable to make the match due to ambiguities.</span></span> <span data-ttu-id="75ba7-108">たとえば、"列挙可能な" パターンを処理するためには、 `MoveNext`というメソッドが必要ですが、コンパイルの対象になるコードには、 `MoveNext`メソッドが 2 つ存在している可能性があります。</span><span class="sxs-lookup"><span data-stu-id="75ba7-108">For example, the "enumerable" pattern requires that there be a method called `MoveNext`, and your code might contain two methods called `MoveNext`.</span></span> <span data-ttu-id="75ba7-109">コンパイラは、どちらのインターフェイスを使用するかについて検索を試行しますが、あいまいさの原因を突き止め、解決することをお勧めします。</span><span class="sxs-lookup"><span data-stu-id="75ba7-109">The compiler will attempt to find an interface to use, but it is recommended that you determine and resolve the cause of the ambiguity.</span></span>  
+<span data-ttu-id="0e6ec-107">CS0278 は、あいまいな部分があるために、コンパイラが適切な仲介処理を実行できない場合に発生する可能性があります。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-107">CS0278 can occur if the compiler is unable to make the match due to ambiguities.</span></span> <span data-ttu-id="0e6ec-108">たとえば、"列挙可能な" パターンを処理するためには、 `MoveNext`というメソッドが必要ですが、コンパイルの対象になるコードには、 `MoveNext`メソッドが 2 つ存在している可能性があります。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-108">For example, the "enumerable" pattern requires that there be a method called `MoveNext`, and your code might contain two methods called `MoveNext`.</span></span> <span data-ttu-id="0e6ec-109">コンパイラは、どちらのインターフェイスを使用するかについて検索を試行しますが、あいまいさの原因を突き止め、解決することをお勧めします。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-109">The compiler will attempt to find an interface to use, but it is recommended that you determine and resolve the cause of the ambiguity.</span></span>  
   
- <span data-ttu-id="75ba7-110">詳細については、「[方法 : foreach を使用してコレクション クラスにアクセスする](../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="75ba7-110">For more information, see [How to: Access a Collection Class with foreach](../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md).</span></span>  
-  
-## <a name="example"></a><span data-ttu-id="75ba7-111">例</span><span class="sxs-lookup"><span data-stu-id="75ba7-111">Example</span></span>  
- <span data-ttu-id="75ba7-112">次の例では CS0278 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="75ba7-112">The following sample generates CS0278.</span></span>  
+## <a name="example"></a><span data-ttu-id="0e6ec-110">例</span><span class="sxs-lookup"><span data-stu-id="0e6ec-110">Example</span></span>  
+ <span data-ttu-id="0e6ec-111">次の例では CS0278 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0e6ec-111">The following sample generates CS0278.</span></span>  
   
 ```csharp  
 // CS0278.cs  
