commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs1579.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1579.md
@@ -1,35 +1,30 @@
 ---
 title: コンパイラ エラー CS1579
-ms.date: 07/20/2015
+ms.date: 05/24/2018
 f1_keywords:
 - CS1579
 helpviewer_keywords:
 - CS1579
 ms.assetid: 1eba84ce-58df-4fe3-9134-e26efefdc4ab
-ms.openlocfilehash: 4b6504ff64b54357ec21685af06d1715f0a41505
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: d7bfd794c9cb44f1f2c7f34fef570f62fc64a331
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
+ms.locfileid: "34549751"
 ---
 # <a name="compiler-error-cs1579"></a>コンパイラ エラー CS1579
-foreach ステートメントは、'type2' が 'identifier' のパブリック定義を含んでいないため、型 'type1' の変数に対して使用できません  
-  
- [foreach](../../../csharp/language-reference/keywords/foreach-in.md) ステートメントを使ってコレクションを反復処理するには、そのコレクションが次の要件を満たしている必要があります。  
-  
--   インターフェイス、クラス、構造体のいずれかであること。  
-  
--   型を返すパブリック <xref:System.Collections.IEnumerable.GetEnumerator%2A> メソッドが存在すること。  
-  
--   戻り値の型に <xref:System.Collections.IEnumerator.Current%2A> という名前のパブリック プロパティと、<xref:System.Collections.IEnumerator.MoveNext%2A> という名前のパブリック メソッドが含まれること。  
-  
--   詳細については、「[方法 : foreach を使用してコレクション クラスにアクセスする](../../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md)」を参照してください。  
-  
-## <a name="example"></a>例  
- この例では、`public` <xref:System.Collections.IEnumerable.GetEnumerator%2A> メソッドが `MyCollection` にないため、[foreach](../../../csharp/language-reference/keywords/foreach-in.md) はコレクションを反復処理できません。  
-  
- 次の例では CS1579 が生成されます。  
-  
+foreach ステートメントは、'type2' が 'identifier' のパブリック定義を含んでいないため、型 'type1' の変数に対して使用できません
+
+[foreach](../keywords/foreach-in.md) ステートメントを使ってコレクションを反復処理するには、そのコレクションが次の要件を満たしている必要があります。
+
+- コレクションの型が、戻り値の型がクラス、構造体、インターフェイス型のいずれかであるパラメーターなしのパブリック メソッド `GetEnumerator` を含んでいる。
+- `GetEnumerator` メソッドの戻り値の型が、`Current` というパブリック プロパティと、戻り値の型が <xref:System.Boolean> であるパラメーターなしのパブリック メソッド `MoveNext` を含んでいる。
+
+## <a name="example"></a>例
+
+次の例では CS1579 が発生します。なぜなら、`MyCollection` クラスにパブリック メソッド `GetEnumerator` が含まれていないためです。
+
 ```csharp  
 // CS1579.cs  
 using System;  
@@ -64,16 +59,10 @@ public class MyCollection
       public bool MoveNext()   
       {  
          nIndex++;  
-         return(nIndex < collection.items.GetLength(0));  
+         return (nIndex < collection.items.Length);  
       }  
   
-      public int Current   
-      {  
-         get   
-         {  
-            return(collection.items[nIndex]);  
-         }  
-      }  
+      public int Current => collection.items[nIndex];
    }  
   
    public static void Main()   
