--- a/docs/csharp/language-reference/compiler-messages/cs1579.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1579.md
@@ -1,35 +1,30 @@
 ---
 title: コンパイラ エラー CS1579
-ms.date: 07/20/2015
+ms.date: 05/24/2018
 f1_keywords:
 - CS1579
 helpviewer_keywords:
 - CS1579
 ms.assetid: 1eba84ce-58df-4fe3-9134-e26efefdc4ab
-ms.openlocfilehash: 4b6504ff64b54357ec21685af06d1715f0a41505
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: d7bfd794c9cb44f1f2c7f34fef570f62fc64a331
+ms.sourcegitcommit: 54231aa56fca059e9297888a96fbca1d4cf3746c
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 05/25/2018
+ms.locfileid: "34549751"
 ---
-# <a name="compiler-error-cs1579"></a><span data-ttu-id="44291-102">コンパイラ エラー CS1579</span><span class="sxs-lookup"><span data-stu-id="44291-102">Compiler Error CS1579</span></span>
-<span data-ttu-id="44291-103">foreach ステートメントは、'type2' が 'identifier' のパブリック定義を含んでいないため、型 'type1' の変数に対して使用できません</span><span class="sxs-lookup"><span data-stu-id="44291-103">foreach statement cannot operate on variables of type 'type1' because 'type2' does not contain a public definition for 'identifier'</span></span>  
-  
- <span data-ttu-id="44291-104">[foreach](../../../csharp/language-reference/keywords/foreach-in.md) ステートメントを使ってコレクションを反復処理するには、そのコレクションが次の要件を満たしている必要があります。</span><span class="sxs-lookup"><span data-stu-id="44291-104">To iterate through a collection using the [foreach](../../../csharp/language-reference/keywords/foreach-in.md) statement, the collection must meet the following requirements:</span></span>  
-  
--   <span data-ttu-id="44291-105">インターフェイス、クラス、構造体のいずれかであること。</span><span class="sxs-lookup"><span data-stu-id="44291-105">It must be an interface, class or struct.</span></span>  
-  
--   <span data-ttu-id="44291-106">型を返すパブリック <xref:System.Collections.IEnumerable.GetEnumerator%2A> メソッドが存在すること。</span><span class="sxs-lookup"><span data-stu-id="44291-106">It must include a public <xref:System.Collections.IEnumerable.GetEnumerator%2A> method that returns a type.</span></span>  
-  
--   <span data-ttu-id="44291-107">戻り値の型に <xref:System.Collections.IEnumerator.Current%2A> という名前のパブリック プロパティと、<xref:System.Collections.IEnumerator.MoveNext%2A> という名前のパブリック メソッドが含まれること。</span><span class="sxs-lookup"><span data-stu-id="44291-107">The return type must contain a public property named <xref:System.Collections.IEnumerator.Current%2A>, and a public method named <xref:System.Collections.IEnumerator.MoveNext%2A>.</span></span>  
-  
--   <span data-ttu-id="44291-108">詳細については、「[方法 : foreach を使用してコレクション クラスにアクセスする](../../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="44291-108">For more information, see [How to: Access a Collection Class with foreach](../../../csharp/programming-guide/classes-and-structs/how-to-access-a-collection-class-with-foreach.md).</span></span>  
-  
-## <a name="example"></a><span data-ttu-id="44291-109">例</span><span class="sxs-lookup"><span data-stu-id="44291-109">Example</span></span>  
- <span data-ttu-id="44291-110">この例では、`public` <xref:System.Collections.IEnumerable.GetEnumerator%2A> メソッドが `MyCollection` にないため、[foreach](../../../csharp/language-reference/keywords/foreach-in.md) はコレクションを反復処理できません。</span><span class="sxs-lookup"><span data-stu-id="44291-110">In this sample, [foreach](../../../csharp/language-reference/keywords/foreach-in.md) is not able to iterate through the collection because there is no `public`<xref:System.Collections.IEnumerable.GetEnumerator%2A> method in `MyCollection`.</span></span>  
-  
- <span data-ttu-id="44291-111">次の例では CS1579 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="44291-111">The following sample generates CS1579.</span></span>  
-  
+# <a name="compiler-error-cs1579"></a><span data-ttu-id="13ffd-102">コンパイラ エラー CS1579</span><span class="sxs-lookup"><span data-stu-id="13ffd-102">Compiler Error CS1579</span></span>
+<span data-ttu-id="13ffd-103">foreach ステートメントは、'type2' が 'identifier' のパブリック定義を含んでいないため、型 'type1' の変数に対して使用できません</span><span class="sxs-lookup"><span data-stu-id="13ffd-103">foreach statement cannot operate on variables of type 'type1' because 'type2' does not contain a public definition for 'identifier'</span></span>
+
+<span data-ttu-id="13ffd-104">[foreach](../keywords/foreach-in.md) ステートメントを使ってコレクションを反復処理するには、そのコレクションが次の要件を満たしている必要があります。</span><span class="sxs-lookup"><span data-stu-id="13ffd-104">To iterate through a collection using the [foreach](../keywords/foreach-in.md) statement, the collection must meet the following requirements:</span></span>
+
+- <span data-ttu-id="13ffd-105">コレクションの型が、戻り値の型がクラス、構造体、インターフェイス型のいずれかであるパラメーターなしのパブリック メソッド `GetEnumerator` を含んでいる。</span><span class="sxs-lookup"><span data-stu-id="13ffd-105">Its type must include a public parameterless `GetEnumerator` method whose return type is either class, struct, or interface type.</span></span>
+- <span data-ttu-id="13ffd-106">`GetEnumerator` メソッドの戻り値の型が、`Current` というパブリック プロパティと、戻り値の型が <xref:System.Boolean> であるパラメーターなしのパブリック メソッド `MoveNext` を含んでいる。</span><span class="sxs-lookup"><span data-stu-id="13ffd-106">The return type of the `GetEnumerator` method must contain a public property named `Current` and a public parameterless method named `MoveNext` whose return type is <xref:System.Boolean>.</span></span>
+
+## <a name="example"></a><span data-ttu-id="13ffd-107">例</span><span class="sxs-lookup"><span data-stu-id="13ffd-107">Example</span></span>
+
+<span data-ttu-id="13ffd-108">次の例では CS1579 が発生します。なぜなら、`MyCollection` クラスにパブリック メソッド `GetEnumerator` が含まれていないためです。</span><span class="sxs-lookup"><span data-stu-id="13ffd-108">The following sample generates CS1579 because the `MyCollection` class doesn't contain the public `GetEnumerator` method:</span></span>
+
 ```csharp  
 // CS1579.cs  
 using System;  
@@ -64,16 +59,10 @@ public class MyCollection
       public bool MoveNext()   
       {  
          nIndex++;  
-         return(nIndex < collection.items.GetLength(0));  
+         return (nIndex < collection.items.Length);  
       }  
   
-      public int Current   
-      {  
-         get   
-         {  
-            return(collection.items[nIndex]);  
-         }  
-      }  
+      public int Current => collection.items[nIndex];
    }  
   
    public static void Main()   
