commit bilingual contents

--- a/docs/csharp/misc/cs0709.md
+++ b/docs/csharp/misc/cs0709.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS0709"
+title: コンパイラ エラー CS0709
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0709
 helpviewer_keywords:
 - CS0709
 ms.assetid: 91040f55-a060-4cc3-b830-f6b771af28d7
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 7b44cb636b12697f23f850c85b3732599fc9bb77
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 28e142de4ce14e1a31dad7894dd6602a2a3c902b
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33305897"
 ---
-# <a name="compiler-error-cs0709"></a><span data-ttu-id="bd359-102">コンパイラ エラー CS0709</span><span class="sxs-lookup"><span data-stu-id="bd359-102">Compiler Error CS0709</span></span>
-<span data-ttu-id="bd359-103">'derived class': 静的クラス 'base class' から派生できません</span><span class="sxs-lookup"><span data-stu-id="bd359-103">'derived class': cannot derive from static class 'base class'</span></span>  
+# <a name="compiler-error-cs0709"></a><span data-ttu-id="9340e-102">コンパイラ エラー CS0709</span><span class="sxs-lookup"><span data-stu-id="9340e-102">Compiler Error CS0709</span></span>
+<span data-ttu-id="9340e-103">'derived class': 静的クラス 'base class' から派生できません</span><span class="sxs-lookup"><span data-stu-id="9340e-103">'derived class': cannot derive from static class 'base class'</span></span>  
   
- <span data-ttu-id="bd359-104">静的クラスをインスタンス化または派生させることはできません。</span><span class="sxs-lookup"><span data-stu-id="bd359-104">A static class cannot be instantiated or derived from.</span></span> <span data-ttu-id="bd359-105">つまり、静的クラスをその他のクラスの基底クラスにすることはできません。</span><span class="sxs-lookup"><span data-stu-id="bd359-105">That is, a static class cannot be a base class of any other class.</span></span>  
+ <span data-ttu-id="9340e-104">静的クラスをインスタンス化または派生させることはできません。</span><span class="sxs-lookup"><span data-stu-id="9340e-104">A static class cannot be instantiated or derived from.</span></span> <span data-ttu-id="9340e-105">つまり、静的クラスをその他のクラスの基底クラスにすることはできません。</span><span class="sxs-lookup"><span data-stu-id="9340e-105">That is, a static class cannot be a base class of any other class.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="bd359-106">例</span><span class="sxs-lookup"><span data-stu-id="bd359-106">Example</span></span>  
- <span data-ttu-id="bd359-107">次の例では CS0709 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="bd359-107">The following sample generates CS0709.</span></span>  
+## <a name="example"></a><span data-ttu-id="9340e-106">例</span><span class="sxs-lookup"><span data-stu-id="9340e-106">Example</span></span>  
+ <span data-ttu-id="9340e-107">次の例では CS0709 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="9340e-107">The following sample generates CS0709.</span></span>  
   
 ```csharp  
 // CS0709.cs  
