--- a/docs/csharp/misc/cs1004.md
+++ b/docs/csharp/misc/cs1004.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS1004"
+title: コンパイラ エラー CS1004
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1004
 helpviewer_keywords:
 - CS1004
 ms.assetid: 93cc1b93-ca4c-49a8-af03-9fbfc84ccab9
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: e4769cd97ffc0fb63b862b97a4d4a7dd6eb5451f
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 17fcb1994b824e3008e74d2c959a4fb8d8fd2d07
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303492"
 ---
-# <a name="compiler-error-cs1004"></a><span data-ttu-id="a2a2a-102">コンパイラ エラー CS1004</span><span class="sxs-lookup"><span data-stu-id="a2a2a-102">Compiler Error CS1004</span></span>
-<span data-ttu-id="a2a2a-103">重複した 'modifier' 修飾子</span><span class="sxs-lookup"><span data-stu-id="a2a2a-103">Duplicate 'modifier' modifier</span></span>  
+# <a name="compiler-error-cs1004"></a><span data-ttu-id="34da5-102">コンパイラ エラー CS1004</span><span class="sxs-lookup"><span data-stu-id="34da5-102">Compiler Error CS1004</span></span>
+<span data-ttu-id="34da5-103">重複した 'modifier' 修飾子</span><span class="sxs-lookup"><span data-stu-id="34da5-103">Duplicate 'modifier' modifier</span></span>  
   
- <span data-ttu-id="a2a2a-104">**アクセス** 修飾子などの重複した修飾子が検出されました。</span><span class="sxs-lookup"><span data-stu-id="a2a2a-104">A duplicate modifier, such as an **access** modifier, was detected.</span></span>  
+ <span data-ttu-id="34da5-104">**アクセス** 修飾子などの重複した修飾子が検出されました。</span><span class="sxs-lookup"><span data-stu-id="34da5-104">A duplicate modifier, such as an **access** modifier, was detected.</span></span>  
   
- <span data-ttu-id="a2a2a-105">次の例では CS1004 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="a2a2a-105">The following sample generates CS1004:</span></span>  
+ <span data-ttu-id="34da5-105">次の例では CS1004 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="34da5-105">The following sample generates CS1004:</span></span>  
   
 ```csharp  
 // CS1004.cs  
