--- a/docs/csharp/misc/cs1016.md
+++ b/docs/csharp/misc/cs1016.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 576e6e12-981c-43b6-9e4a-29fa4e9f76e8
 ms.openlocfilehash: 7e6503712267e49860c39c2a25af8bf7c37ec8fc
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303463"
 ---
 # <a name="compiler-error-cs1016"></a><span data-ttu-id="514fc-102">コンパイラ エラー CS1016</span><span class="sxs-lookup"><span data-stu-id="514fc-102">Compiler Error CS1016</span></span>
 <span data-ttu-id="514fc-103">名前付き属性引数が必要です。</span><span class="sxs-lookup"><span data-stu-id="514fc-103">Named attribute argument expected</span></span>  
