--- a/docs/csharp/misc/cs1025.md
+++ b/docs/csharp/misc/cs1025.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラ エラー CS1025"
+title: コンパイラ エラー CS1025
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1025
 helpviewer_keywords:
 - CS1025
 ms.assetid: 491c186f-cb40-47a9-9656-44fadfa18ae2
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: eaaa93f4214cf380f34e0390bdd4ffdc1109c527
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 82ca2a58944c3a3bc72dc37a68875174f19984e5
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303804"
 ---
-# <a name="compiler-error-cs1025"></a><span data-ttu-id="d6809-102">コンパイラ エラー CS1025</span><span class="sxs-lookup"><span data-stu-id="d6809-102">Compiler Error CS1025</span></span>
-<span data-ttu-id="d6809-103">単一行コメントか行の終わりが必要です。</span><span class="sxs-lookup"><span data-stu-id="d6809-103">Single-line comment or end-of-line expected</span></span>  
+# <a name="compiler-error-cs1025"></a><span data-ttu-id="add22-102">コンパイラ エラー CS1025</span><span class="sxs-lookup"><span data-stu-id="add22-102">Compiler Error CS1025</span></span>
+<span data-ttu-id="add22-103">単一行コメントか行の終わりが必要です。</span><span class="sxs-lookup"><span data-stu-id="add22-103">Single-line comment or end-of-line expected</span></span>  
   
- <span data-ttu-id="d6809-104">[プリプロセッサ ディレクティブ](../../csharp/language-reference/preprocessor-directives/index.md) がある行に複数行のコメントを記述することはできません。</span><span class="sxs-lookup"><span data-stu-id="d6809-104">A line with a [preprocessor directive](../../csharp/language-reference/preprocessor-directives/index.md) cannot have a multiline comment.</span></span>  
+ <span data-ttu-id="add22-104">[プリプロセッサ ディレクティブ](../../csharp/language-reference/preprocessor-directives/index.md) がある行に複数行のコメントを記述することはできません。</span><span class="sxs-lookup"><span data-stu-id="add22-104">A line with a [preprocessor directive](../../csharp/language-reference/preprocessor-directives/index.md) cannot have a multiline comment.</span></span>  
   
- <span data-ttu-id="d6809-105">次の例では CS1025 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="d6809-105">The following sample generates CS1025:</span></span>  
+ <span data-ttu-id="add22-105">次の例では CS1025 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="add22-105">The following sample generates CS1025:</span></span>  
   
 ```csharp  
 #if true /* hello  
@@ -32,7 +26,7 @@ ms.lasthandoff: 03/15/2018
 #endif   // this is a good comment  
 ```  
   
- <span data-ttu-id="d6809-106">CS1025 は、次のように、一部の無効なプリプロセッサ ディレクティブを試行した場合にも発生することがあります。</span><span class="sxs-lookup"><span data-stu-id="d6809-106">CS1025 could also occur if you attempt some invalid preprocessor directive, as follows:</span></span>  
+ <span data-ttu-id="add22-106">CS1025 は、次のように、一部の無効なプリプロセッサ ディレクティブを試行した場合にも発生することがあります。</span><span class="sxs-lookup"><span data-stu-id="add22-106">CS1025 could also occur if you attempt some invalid preprocessor directive, as follows:</span></span>  
   
 ```csharp  
 // CS1025.cs  
