--- a/docs/csharp/misc/cs1033.md
+++ b/docs/csharp/misc/cs1033.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS1033
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1033
 helpviewer_keywords:
 - CS1033
 ms.assetid: eb0f4001-84a6-4918-a648-cf710d038de7
-caps.latest.revision: 7
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: cf2a1e74c24ec5fa911e0cb6419dcc6cb5d0197f
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: 0a810362722fc145caafeeeac6828d2e5eb60a6d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33303297"
 ---
-# <a name="compiler-error-cs1033"></a><span data-ttu-id="4c684-102">コンパイラ エラー CS1033</span><span class="sxs-lookup"><span data-stu-id="4c684-102">Compiler Error CS1033</span></span>
-<span data-ttu-id="4c684-103">ソース ファイルは、PDB 内で表せる 16,707,565 行の限界を超えているため、デバッグ情報は不正確になります</span><span class="sxs-lookup"><span data-stu-id="4c684-103">Source file has exceeded the limit of 16,707,565 lines representable in the PDB; debug information will be incorrect</span></span>  
+# <a name="compiler-error-cs1033"></a><span data-ttu-id="99703-102">コンパイラ エラー CS1033</span><span class="sxs-lookup"><span data-stu-id="99703-102">Compiler Error CS1033</span></span>
+<span data-ttu-id="99703-103">ソース ファイルは、PDB 内で表せる 16,707,565 行の限界を超えているため、デバッグ情報は不正確になります</span><span class="sxs-lookup"><span data-stu-id="99703-103">Source file has exceeded the limit of 16,707,565 lines representable in the PDB; debug information will be incorrect</span></span>  
   
- <span data-ttu-id="4c684-104">ソース コード ファイルの行数が、コンパイラで処理できる行数の最大値を超えています。</span><span class="sxs-lookup"><span data-stu-id="4c684-104">A source-code file exceeded the maximum allowable number of lines that the compiler can process.</span></span> <span data-ttu-id="4c684-105">このエラーを解決するには、元のファイルから 2 つ以上のソース コード ファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="4c684-105">To resolve this error, create two or more source-code files from the original file.</span></span> <span data-ttu-id="4c684-106">最大行数は 268,435,454 行です。</span><span class="sxs-lookup"><span data-stu-id="4c684-106">The maximum number of lines is 268,435,454 lines.</span></span> <span data-ttu-id="4c684-107">**/debug**オプションを使用した場合、行数が 16,707,566 を超えると、デバッグ情報が破損します。</span><span class="sxs-lookup"><span data-stu-id="4c684-107">If you are using **/debug**, using more than 16,707,566 will result in corrupted debug information.</span></span>
+ <span data-ttu-id="99703-104">ソース コード ファイルの行数が、コンパイラで処理できる行数の最大値を超えています。</span><span class="sxs-lookup"><span data-stu-id="99703-104">A source-code file exceeded the maximum allowable number of lines that the compiler can process.</span></span> <span data-ttu-id="99703-105">このエラーを解決するには、元のファイルから 2 つ以上のソース コード ファイルを作成します。</span><span class="sxs-lookup"><span data-stu-id="99703-105">To resolve this error, create two or more source-code files from the original file.</span></span> <span data-ttu-id="99703-106">最大行数は 268,435,454 行です。</span><span class="sxs-lookup"><span data-stu-id="99703-106">The maximum number of lines is 268,435,454 lines.</span></span> <span data-ttu-id="99703-107">**/debug**オプションを使用した場合、行数が 16,707,566 を超えると、デバッグ情報が破損します。</span><span class="sxs-lookup"><span data-stu-id="99703-107">If you are using **/debug**, using more than 16,707,566 will result in corrupted debug information.</span></span>
