--- a/docs/csharp/misc/cs1508.md
+++ b/docs/csharp/misc/cs1508.md
@@ -1,30 +1,24 @@
 ---
 title: コンパイラ エラー CS1508
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1508
 helpviewer_keywords:
 - CS1508
 ms.assetid: 979bc615-58ce-49f8-ba73-e6cf57c56418
-caps.latest.revision: 7
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: de4ae642c5bb26a0e260fa5f64e75532f7194e93
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: a45d16a47520a06effa85296205fa962e166ff83
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33306154"
 ---
-# <a name="compiler-error-cs1508"></a><span data-ttu-id="c9b9e-102">コンパイラ エラー CS1508</span><span class="sxs-lookup"><span data-stu-id="c9b9e-102">Compiler Error CS1508</span></span>
-<span data-ttu-id="c9b9e-103">リソース識別子 'identifier' はアセンブリで既に使用されています</span><span class="sxs-lookup"><span data-stu-id="c9b9e-103">Resource identifier 'identifier' has already been used in this assembly</span></span>  
+# <a name="compiler-error-cs1508"></a><span data-ttu-id="5e970-102">コンパイラ エラー CS1508</span><span class="sxs-lookup"><span data-stu-id="5e970-102">Compiler Error CS1508</span></span>
+<span data-ttu-id="5e970-103">リソース識別子 'identifier' はアセンブリで既に使用されています</span><span class="sxs-lookup"><span data-stu-id="5e970-103">Resource identifier 'identifier' has already been used in this assembly</span></span>  
   
- <span data-ttu-id="c9b9e-104">コンパイルで、同じ識別子 (***identifier***) が、2 つ以上の [/resource](../../csharp/language-reference/compiler-options/resource-compiler-option.md) または [/linkresource](../../csharp/language-reference/compiler-options/linkresource-compiler-option.md) コンパイラ オプションに渡されました。</span><span class="sxs-lookup"><span data-stu-id="c9b9e-104">In a compilation, the same identifier (***identifier***) was passed to two or more [/resource](../../csharp/language-reference/compiler-options/resource-compiler-option.md) or [/linkresource](../../csharp/language-reference/compiler-options/linkresource-compiler-option.md) compiler options.</span></span>  
+ <span data-ttu-id="5e970-104">コンパイルで、同じ識別子 (***identifier***) が、2 つ以上の [/resource](../../csharp/language-reference/compiler-options/resource-compiler-option.md) または [/linkresource](../../csharp/language-reference/compiler-options/linkresource-compiler-option.md) コンパイラ オプションに渡されました。</span><span class="sxs-lookup"><span data-stu-id="5e970-104">In a compilation, the same identifier (***identifier***) was passed to two or more [/resource](../../csharp/language-reference/compiler-options/resource-compiler-option.md) or [/linkresource](../../csharp/language-reference/compiler-options/linkresource-compiler-option.md) compiler options.</span></span>  
   
- <span data-ttu-id="c9b9e-105">たとえば、次のオプションでは CS1508 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="c9b9e-105">For example, the following options would generate CS1508:</span></span>  
+ <span data-ttu-id="5e970-105">たとえば、次のオプションでは CS1508 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="5e970-105">For example, the following options would generate CS1508:</span></span>  
   
 ```  
 /resource:anyfile.bmp,DuplicatIdent /linkresource:a.bmp,DuplicatIdent  
