--- a/docs/csharp/misc/cs1521.md
+++ b/docs/csharp/misc/cs1521.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 9a482b33-24f2-4654-81b4-be40bf56d624
 ms.openlocfilehash: b74368c55d836bdf0df9c8bff83938159f856ccc
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33307409"
 ---
 # <a name="compiler-error-cs1521"></a><span data-ttu-id="f1078-102">コンパイラ エラー CS1521</span><span class="sxs-lookup"><span data-stu-id="f1078-102">Compiler Error CS1521</span></span>
 <span data-ttu-id="f1078-103">無効な基本型です。</span><span class="sxs-lookup"><span data-stu-id="f1078-103">Invalid base type</span></span>  
