--- a/docs/csharp/misc/cs1561.md
+++ b/docs/csharp/misc/cs1561.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS1561
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1561
 helpviewer_keywords:
 - CS1561
 ms.assetid: 840f469b-65e1-49c6-99cc-8c1ed130a37b
-caps.latest.revision: 10
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 7a78704b58e8301b092e13a46bd27e4254d8c252
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: f92faf09e5dfc93db35c02c859547209fef4d2a8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33307302"
 ---
-# <a name="compiler-error-cs1561"></a><span data-ttu-id="e5256-102">コンパイラ エラー CS1561</span><span class="sxs-lookup"><span data-stu-id="e5256-102">Compiler Error CS1561</span></span>
-<span data-ttu-id="e5256-103">出力ファイル名が長すぎるか、または無効です。</span><span class="sxs-lookup"><span data-stu-id="e5256-103">Output filename is too long or invalid</span></span>  
+# <a name="compiler-error-cs1561"></a><span data-ttu-id="4e1ec-102">コンパイラ エラー CS1561</span><span class="sxs-lookup"><span data-stu-id="4e1ec-102">Compiler Error CS1561</span></span>
+<span data-ttu-id="4e1ec-103">出力ファイル名が長すぎるか、または無効です。</span><span class="sxs-lookup"><span data-stu-id="4e1ec-103">Output filename is too long or invalid</span></span>  
   
- <span data-ttu-id="e5256-104">出力ファイル名は 256 文字以上にはできません。また、ユーロ記号、疑問符、円記号などの無効な文字を含めることもできません。</span><span class="sxs-lookup"><span data-stu-id="e5256-104">The output file name cannot be longer than 256 characters, and may not contain invalid characters, such as the Euro symbol, a question mark, or a backslash, among others.</span></span>
+ <span data-ttu-id="4e1ec-104">出力ファイル名は 256 文字以上にはできません。また、ユーロ記号、疑問符、円記号などの無効な文字を含めることもできません。</span><span class="sxs-lookup"><span data-stu-id="4e1ec-104">The output file name cannot be longer than 256 characters, and may not contain invalid characters, such as the Euro symbol, a question mark, or a backslash, among others.</span></span>
