--- a/docs/csharp/misc/cs1594.md
+++ b/docs/csharp/misc/cs1594.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: f949a992-27a3-470d-b512-e590e5170af3
 ms.openlocfilehash: e2aa18cd43a0eca7e9a6ca55e433cd501400faa2
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33306856"
 ---
 # <a name="compiler-error-cs1594"></a><span data-ttu-id="a437b-102">コンパイラ エラー CS1594</span><span class="sxs-lookup"><span data-stu-id="a437b-102">Compiler Error CS1594</span></span>
 <span data-ttu-id="a437b-103">デリゲート 'delegate' に無効な引数があります</span><span class="sxs-lookup"><span data-stu-id="a437b-103">Delegate 'delegate' has some invalid arguments</span></span>  
