--- a/docs/csharp/misc/cs1606.md
+++ b/docs/csharp/misc/cs1606.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS1606
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1606
 helpviewer_keywords:
 - CS1606
 ms.assetid: 36758c4f-4e26-4879-9e61-6158ca5e74a3
-caps.latest.revision: 6
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3adc347b12cc436a8bcf83e0911ba49ff0ac2761
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: 8a1835faa261d553b7d8f7d6cfc577cedc31b3d6
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33305988"
 ---
-# <a name="compiler-error-cs1606"></a><span data-ttu-id="d165b-102">コンパイラ エラー CS1606</span><span class="sxs-lookup"><span data-stu-id="d165b-102">Compiler Error CS1606</span></span>
-<span data-ttu-id="d165b-103">アセンブリ署名ができませんでした。出力は署名されていない可能性があります -- 理由</span><span class="sxs-lookup"><span data-stu-id="d165b-103">Assembly signing failed; output may not be signed -- reason</span></span>  
+# <a name="compiler-error-cs1606"></a><span data-ttu-id="e25d2-102">コンパイラ エラー CS1606</span><span class="sxs-lookup"><span data-stu-id="e25d2-102">Compiler Error CS1606</span></span>
+<span data-ttu-id="e25d2-103">アセンブリ署名ができませんでした。出力は署名されていない可能性があります -- 理由</span><span class="sxs-lookup"><span data-stu-id="e25d2-103">Assembly signing failed; output may not be signed -- reason</span></span>  
   
- <span data-ttu-id="d165b-104">アセンブリが生成されましたが、コンパイラが署名を完了しようとしたときにエラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="d165b-104">The assembly was produced, but when the compiler attempted to finish signing it, there was a failure.</span></span>
+ <span data-ttu-id="e25d2-104">アセンブリが生成されましたが、コンパイラが署名を完了しようとしたときにエラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="e25d2-104">The assembly was produced, but when the compiler attempted to finish signing it, there was a failure.</span></span>
