--- a/docs/csharp/misc/cs1649.md
+++ b/docs/csharp/misc/cs1649.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS1649"
+title: コンパイラ エラー CS1649
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1649
 helpviewer_keywords:
 - CS1649
 ms.assetid: 6355c7f2-157c-441d-8925-500062988636
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 7ba8c6432c32fc2f9ad70aeacd788f9c6392336b
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 3d8952c99781194f33ee316d5fdd18584b11d07c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33308920"
 ---
-# <a name="compiler-error-cs1649"></a><span data-ttu-id="bdbfc-102">コンパイラ エラー CS1649</span><span class="sxs-lookup"><span data-stu-id="bdbfc-102">Compiler Error CS1649</span></span>
-<span data-ttu-id="bdbfc-103">読み取り専用フィールド 'identifier' のメンバーに ref または out を渡すことはできません (静的コンストラクターでは可)。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-103">Members of readonly field 'identifier' cannot be passed ref or out (except in a constructor)</span></span>  
+# <a name="compiler-error-cs1649"></a><span data-ttu-id="04fb0-102">コンパイラ エラー CS1649</span><span class="sxs-lookup"><span data-stu-id="04fb0-102">Compiler Error CS1649</span></span>
+<span data-ttu-id="04fb0-103">読み取り専用フィールド 'identifier' のメンバーに ref または out を渡すことはできません (静的コンストラクターでは可)。</span><span class="sxs-lookup"><span data-stu-id="04fb0-103">Members of readonly field 'identifier' cannot be passed ref or out (except in a constructor)</span></span>  
   
- <span data-ttu-id="bdbfc-104">このエラーは、関数に、 `readonly` フィールドのメンバーである変数を `ref` または `out` 引数として渡した場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-104">This error occurs if you pass a variable to a function that is a member of a `readonly` field as a `ref` or `out` argument.</span></span> <span data-ttu-id="bdbfc-105">`ref` および `out` パラメーターが関数によって変更される可能性があるため、これは許可されません。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-105">Since `ref` and `out` parameters may be modified by the function, this is not allowed.</span></span> <span data-ttu-id="bdbfc-106">このエラーを解決するには、このフィールドの `readonly` キーワードを削除するか、または `readonly` フィールドのメンバーを関数に渡さないようにします。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-106">To resolve this error, remove the `readonly` keyword on the field, or do not pass the members of the `readonly` field to the function.</span></span> <span data-ttu-id="bdbfc-107">たとえば、次の例に示すように、変更可能な一時変数を作成して、この一時変数を `ref` 引数として渡す操作を試すことができます。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-107">For example, you might try creating a temporary variable which can be modifed and passing the temporary as a `ref` argument, as shown in the following example.</span></span>  
+ <span data-ttu-id="04fb0-104">このエラーは、関数に、 `readonly` フィールドのメンバーである変数を `ref` または `out` 引数として渡した場合に発生します。</span><span class="sxs-lookup"><span data-stu-id="04fb0-104">This error occurs if you pass a variable to a function that is a member of a `readonly` field as a `ref` or `out` argument.</span></span> <span data-ttu-id="04fb0-105">`ref` および `out` パラメーターが関数によって変更される可能性があるため、これは許可されません。</span><span class="sxs-lookup"><span data-stu-id="04fb0-105">Since `ref` and `out` parameters may be modified by the function, this is not allowed.</span></span> <span data-ttu-id="04fb0-106">このエラーを解決するには、このフィールドの `readonly` キーワードを削除するか、または `readonly` フィールドのメンバーを関数に渡さないようにします。</span><span class="sxs-lookup"><span data-stu-id="04fb0-106">To resolve this error, remove the `readonly` keyword on the field, or do not pass the members of the `readonly` field to the function.</span></span> <span data-ttu-id="04fb0-107">たとえば、次の例に示すように、変更可能な一時変数を作成して、この一時変数を `ref` 引数として渡す操作を試すことができます。</span><span class="sxs-lookup"><span data-stu-id="04fb0-107">For example, you might try creating a temporary variable which can be modifed and passing the temporary as a `ref` argument, as shown in the following example.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="bdbfc-108">例</span><span class="sxs-lookup"><span data-stu-id="bdbfc-108">Example</span></span>  
- <span data-ttu-id="bdbfc-109">次の例では CS1649 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="bdbfc-109">The following sample generates CS1649:</span></span>  
+## <a name="example"></a><span data-ttu-id="04fb0-108">例</span><span class="sxs-lookup"><span data-stu-id="04fb0-108">Example</span></span>  
+ <span data-ttu-id="04fb0-109">次の例では CS1649 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="04fb0-109">The following sample generates CS1649:</span></span>  
   
 ```csharp  
 // CS1649.cs  
