--- a/docs/csharp/misc/cs1709.md
+++ b/docs/csharp/misc/cs1709.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: e2bb1d30-4f30-4e10-82da-df1d3418454c
 ms.openlocfilehash: df56938a65c72ac15d82126ddad5677a73ec385f
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33307626"
 ---
 # <a name="compiler-warning-level-1-cs1709"></a><span data-ttu-id="934df-102">コンパイラの警告 (レベル 1) CS1709</span><span class="sxs-lookup"><span data-stu-id="934df-102">Compiler Warning (level 1) CS1709</span></span>
 <span data-ttu-id="934df-103">プリプロセッサ ディレクティブに指定されたファイル名は空です。</span><span class="sxs-lookup"><span data-stu-id="934df-103">Filename specified for preprocessor directive is empty</span></span>  
