--- a/docs/csharp/misc/cs2011.md
+++ b/docs/csharp/misc/cs2011.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 82d71d7e-7ce0-428a-b9fe-ce8e81a07abd
 ms.openlocfilehash: 5211d1cbb384040404f8c5db5b3a4eb616f9bed9
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33304779"
 ---
 # <a name="compiler-error-cs2011"></a><span data-ttu-id="8ba8d-102">コンパイラ エラー CS2011</span><span class="sxs-lookup"><span data-stu-id="8ba8d-102">Compiler Error CS2011</span></span>
 <span data-ttu-id="8ba8d-103">応答ファイル 'file' を開けません</span><span class="sxs-lookup"><span data-stu-id="8ba8d-103">Unable to open response file 'file'</span></span>  
