--- a/docs/csharp/misc/cs2018.md
+++ b/docs/csharp/misc/cs2018.md
@@ -1,25 +1,19 @@
 ---
 title: コンパイラ エラー CS2018
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS2018
 helpviewer_keywords:
 - CS2018
 ms.assetid: 227f1c1b-61ec-4068-83a1-7ca686be0916
-caps.latest.revision: 6
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: f34424b5be16d0e38e63e04fe5a77700afd91193
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
-ms.translationtype: MT
+ms.openlocfilehash: ff980688c067bacf9588af9f1d99caa31586b26d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33305062"
 ---
-# <a name="compiler-error-cs2018"></a><span data-ttu-id="90563-102">コンパイラ エラー CS2018</span><span class="sxs-lookup"><span data-stu-id="90563-102">Compiler Error CS2018</span></span>
-<span data-ttu-id="90563-103">メッセージ ファイル 'cscmsgs.dll' が見つかりません</span><span class="sxs-lookup"><span data-stu-id="90563-103">Unable to find messages file 'cscmsgs.dll'</span></span>  
+# <a name="compiler-error-cs2018"></a><span data-ttu-id="735ea-102">コンパイラ エラー CS2018</span><span class="sxs-lookup"><span data-stu-id="735ea-102">Compiler Error CS2018</span></span>
+<span data-ttu-id="735ea-103">メッセージ ファイル 'cscmsgs.dll' が見つかりません</span><span class="sxs-lookup"><span data-stu-id="735ea-103">Unable to find messages file 'cscmsgs.dll'</span></span>  
   
- <span data-ttu-id="90563-104">コンパイラのエラーおよび警告メッセージを含む .dll ファイルが見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="90563-104">The .dll file that contains the compiler's error and warning messages was not found.</span></span> <span data-ttu-id="90563-105">このファイルは、その他のコンパイラ サポート ファイルと同じディレクトリに存在する必要があります。</span><span class="sxs-lookup"><span data-stu-id="90563-105">This file must be present in the same directory as the other compiler support files.</span></span>
+ <span data-ttu-id="735ea-104">コンパイラのエラーおよび警告メッセージを含む .dll ファイルが見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="735ea-104">The .dll file that contains the compiler's error and warning messages was not found.</span></span> <span data-ttu-id="735ea-105">このファイルは、その他のコンパイラ サポート ファイルと同じディレクトリに存在する必要があります。</span><span class="sxs-lookup"><span data-stu-id="735ea-105">This file must be present in the same directory as the other compiler support files.</span></span>
