--- a/docs/csharp/misc/cs1718.md
+++ b/docs/csharp/misc/cs1718.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 7c1c11fd-4f91-482d-b8f7-efe2a361634e
 ms.openlocfilehash: 303aec0ae3d680b09f9c73aa67b9a5853379c1a9
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33313983"
 ---
 # <a name="compiler-warning-level-3-cs1718"></a><span data-ttu-id="822a6-102">コンパイラの警告 (レベル 3) CS1718</span><span class="sxs-lookup"><span data-stu-id="822a6-102">Compiler Warning (level 3) CS1718</span></span>
 <span data-ttu-id="822a6-103">同じ変数と比較されました。他の変数と比較しますか?</span><span class="sxs-lookup"><span data-stu-id="822a6-103">Comparison made to same variable; did you mean to compare something else?</span></span>  
