--- a/docs/csharp/misc/cs1732.md
+++ b/docs/csharp/misc/cs1732.md
@@ -1,35 +1,29 @@
 ---
-title: "コンパイラ エラー CS1732"
+title: コンパイラ エラー CS1732
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1732
 helpviewer_keywords:
 - CS1732
 ms.assetid: 72c7f7fc-d5f2-4538-9b02-50dda54d3b1e
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: f1ac0f107440796961c936b4b35e4dd35c7b5c57
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 44ed1c56c437cad0a6080497258df8858e1a658c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312355"
 ---
-# <a name="compiler-error-cs1732"></a><span data-ttu-id="fdd4f-102">コンパイラ エラー CS1732</span><span class="sxs-lookup"><span data-stu-id="fdd4f-102">Compiler Error CS1732</span></span>
-<span data-ttu-id="fdd4f-103">パラメーターが必要です。</span><span class="sxs-lookup"><span data-stu-id="fdd4f-103">Expected parameter.</span></span>  
+# <a name="compiler-error-cs1732"></a><span data-ttu-id="8c7fe-102">コンパイラ エラー CS1732</span><span class="sxs-lookup"><span data-stu-id="8c7fe-102">Compiler Error CS1732</span></span>
+<span data-ttu-id="8c7fe-103">パラメーターが必要です。</span><span class="sxs-lookup"><span data-stu-id="8c7fe-103">Expected parameter.</span></span>  
   
- <span data-ttu-id="fdd4f-104">このエラーは、ラムダ式の入力パラメーターの後にコンマが含まれているが、それに続くパラメーターが指定されていない場合に生成されます。</span><span class="sxs-lookup"><span data-stu-id="fdd4f-104">This error is produced when a lambda expression contains a comma following an input parameter but does not specify the following parameter.</span></span>  
+ <span data-ttu-id="8c7fe-104">このエラーは、ラムダ式の入力パラメーターの後にコンマが含まれているが、それに続くパラメーターが指定されていない場合に生成されます。</span><span class="sxs-lookup"><span data-stu-id="8c7fe-104">This error is produced when a lambda expression contains a comma following an input parameter but does not specify the following parameter.</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fdd4f-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="fdd4f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8c7fe-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8c7fe-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="fdd4f-106">コンマを削除するか、コンパイラが期待する入力パラメーターをコンマの後に追加します。</span><span class="sxs-lookup"><span data-stu-id="fdd4f-106">Either remove the comma, or add the input parameter that the compiler expects to find after the comma.</span></span>  
+1.  <span data-ttu-id="8c7fe-106">コンマを削除するか、コンパイラが期待する入力パラメーターをコンマの後に追加します。</span><span class="sxs-lookup"><span data-stu-id="8c7fe-106">Either remove the comma, or add the input parameter that the compiler expects to find after the comma.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="fdd4f-107">例</span><span class="sxs-lookup"><span data-stu-id="fdd4f-107">Example</span></span>  
- <span data-ttu-id="fdd4f-108">次の例では CS1732 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="fdd4f-108">The following example produces CS1732:</span></span>  
+## <a name="example"></a><span data-ttu-id="8c7fe-107">例</span><span class="sxs-lookup"><span data-stu-id="8c7fe-107">Example</span></span>  
+ <span data-ttu-id="8c7fe-108">次の例では CS1732 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="8c7fe-108">The following example produces CS1732:</span></span>  
   
 ```csharp  
 // cs1732.cs  
