commit translated contents

--- a/docs/csharp/language-reference/compiler-messages/cs1729.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1729.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215561"
 ---
 # <a name="compiler-error-cs1729"></a>コンパイラ エラー CS1729
 '<型>' に、引数を '<個数>' 個指定できるコンストラクターがありません。  
