--- a/docs/csharp/language-reference/compiler-messages/cs1656.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1656.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215194"
 ---
 # <a name="compiler-error-cs1656"></a>コンパイラ エラー CS1656
 'variable' は 'read-only variable type' であるため、割り当てることはできません  
