--- a/docs/csharp/misc/cs0742.md
+++ b/docs/csharp/misc/cs0742.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 078ee7af-17e4-4572-8fee-d97e09c9002b
 ms.openlocfilehash: 57b3712f71483895249434add29f551e906d8bf2
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312810"
 ---
 # <a name="compiler-error-cs0742"></a>コンパイラ エラー CS0742
 クエリ本体の後には select 句または group 句が必要です  
