--- a/docs/csharp/misc/cs1580.md
+++ b/docs/csharp/misc/cs1580.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: ffd1b6d7-6cab-47e3-b7fe-c79cb435cddf
 ms.openlocfilehash: 93e10c59c84c412129ea93af7997fa924e1dc7c3
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312527"
 ---
 # <a name="compiler-warning-level-1-cs1580"></a>コンパイラの警告 (レベル 1) CS1580
 XML コメントの cref 属性のパラメーター 'parameter number' の型が無効です  
