--- a/docs/csharp/misc/cs1609.md
+++ b/docs/csharp/misc/cs1609.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 89e112f8-6337-4803-8741-2e38497deb8c
 ms.openlocfilehash: fa7d556318b19cd45dbbb3d4a0350524220bb3c8
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33313356"
 ---
 # <a name="compiler-error-cs1609"></a>コンパイラ エラー CS1609
 修飾子をイベント アクセサー宣言に付属させることはできません。  
