commit bilingual contents

--- a/docs/csharp/language-reference/compiler-messages/cs1729.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1729.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33215561"
 ---
 # <a name="compiler-error-cs1729"></a><span data-ttu-id="43892-102">コンパイラ エラー CS1729</span><span class="sxs-lookup"><span data-stu-id="43892-102">Compiler Error CS1729</span></span>
 <span data-ttu-id="43892-103">'<型>' に、引数を '<個数>' 個指定できるコンストラクターがありません。</span><span class="sxs-lookup"><span data-stu-id="43892-103">'type' does not contain a constructor that takes 'number' arguments.</span></span>  
