--- a/docs/csharp/misc/cs1609.md
+++ b/docs/csharp/misc/cs1609.md
@@ -1,31 +1,25 @@
 ---
-title: "コンパイラ エラー CS1609"
+title: コンパイラ エラー CS1609
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1609
 helpviewer_keywords:
 - CS1609
 ms.assetid: 89e112f8-6337-4803-8741-2e38497deb8c
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: f41b7d675c494983dab8d0f52384d6aae1f75caf
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: fa7d556318b19cd45dbbb3d4a0350524220bb3c8
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33313356"
 ---
-# <a name="compiler-error-cs1609"></a><span data-ttu-id="df131-102">コンパイラ エラー CS1609</span><span class="sxs-lookup"><span data-stu-id="df131-102">Compiler Error CS1609</span></span>
-<span data-ttu-id="df131-103">修飾子をイベント アクセサー宣言に付属させることはできません。</span><span class="sxs-lookup"><span data-stu-id="df131-103">Modifiers cannot be placed on event accessor declarations</span></span>  
+# <a name="compiler-error-cs1609"></a><span data-ttu-id="46cc3-102">コンパイラ エラー CS1609</span><span class="sxs-lookup"><span data-stu-id="46cc3-102">Compiler Error CS1609</span></span>
+<span data-ttu-id="46cc3-103">修飾子をイベント アクセサー宣言に付属させることはできません。</span><span class="sxs-lookup"><span data-stu-id="46cc3-103">Modifiers cannot be placed on event accessor declarations</span></span>  
   
- <span data-ttu-id="df131-104">修飾子はイベント宣言にのみ付属でき、イベント アクセサー宣言には付属させることはできません。</span><span class="sxs-lookup"><span data-stu-id="df131-104">Modifiers can only be placed on event declarations and not on the event accessor declarations.</span></span> <span data-ttu-id="df131-105">詳細については、「[プロパティの使用](../../csharp/programming-guide/classes-and-structs/using-properties.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="df131-105">For more information, see [Using Properties](../../csharp/programming-guide/classes-and-structs/using-properties.md).</span></span>  
+ <span data-ttu-id="46cc3-104">修飾子はイベント宣言にのみ付属でき、イベント アクセサー宣言には付属させることはできません。</span><span class="sxs-lookup"><span data-stu-id="46cc3-104">Modifiers can only be placed on event declarations and not on the event accessor declarations.</span></span> <span data-ttu-id="46cc3-105">詳細については、「[プロパティの使用](../../csharp/programming-guide/classes-and-structs/using-properties.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="46cc3-105">For more information, see [Using Properties](../../csharp/programming-guide/classes-and-structs/using-properties.md).</span></span>  
   
-## <a name="example"></a><span data-ttu-id="df131-106">例</span><span class="sxs-lookup"><span data-stu-id="df131-106">Example</span></span>  
- <span data-ttu-id="df131-107">次の例では CS1609 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="df131-107">The following sample generates CS1609.</span></span>  
+## <a name="example"></a><span data-ttu-id="46cc3-106">例</span><span class="sxs-lookup"><span data-stu-id="46cc3-106">Example</span></span>  
+ <span data-ttu-id="46cc3-107">次の例では CS1609 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="46cc3-107">The following sample generates CS1609.</span></span>  
   
 ```csharp  
 // CS1609.cs  
