--- a/docs/csharp/language-reference/compiler-messages/cs7003.md
+++ b/docs/csharp/language-reference/compiler-messages/cs7003.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33213065"
 ---
 # <a name="compiler-error-cs7003"></a><span data-ttu-id="193bd-102">コンパイラ エラー CS7003</span><span class="sxs-lookup"><span data-stu-id="193bd-102">Compiler Error CS7003</span></span>
 <span data-ttu-id="193bd-103">バインドされていないジェネリック名の予期しない使用方法です</span><span class="sxs-lookup"><span data-stu-id="193bd-103">Unexpected use of an unbound generic name</span></span>
