--- a/docs/csharp/misc/cs0742.md
+++ b/docs/csharp/misc/cs0742.md
@@ -1,35 +1,29 @@
 ---
-title: "コンパイラ エラー CS0742"
+title: コンパイラ エラー CS0742
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS0742
 helpviewer_keywords:
 - CS0742
 ms.assetid: 078ee7af-17e4-4572-8fee-d97e09c9002b
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 3d06758a776241295c03862ae5922d0f03662a6c
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 57b3712f71483895249434add29f551e906d8bf2
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312810"
 ---
-# <a name="compiler-error-cs0742"></a><span data-ttu-id="98a3e-102">コンパイラ エラー CS0742</span><span class="sxs-lookup"><span data-stu-id="98a3e-102">Compiler Error CS0742</span></span>
-<span data-ttu-id="98a3e-103">クエリ本体の後には select 句または group 句が必要です</span><span class="sxs-lookup"><span data-stu-id="98a3e-103">A query body must end with a select clause or a group clause</span></span>  
+# <a name="compiler-error-cs0742"></a><span data-ttu-id="45f97-102">コンパイラ エラー CS0742</span><span class="sxs-lookup"><span data-stu-id="45f97-102">Compiler Error CS0742</span></span>
+<span data-ttu-id="45f97-103">クエリ本体の後には select 句または group 句が必要です</span><span class="sxs-lookup"><span data-stu-id="45f97-103">A query body must end with a select clause or a group clause</span></span>  
   
- <span data-ttu-id="98a3e-104">クエリ式は、継続なしで `select` 句または `group` 句のいずれかで終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="98a3e-104">A query expression must terminate with either a `select` clause or a `group` clause without a continuation.</span></span>  
+ <span data-ttu-id="45f97-104">クエリ式は、継続なしで `select` 句または `group` 句のいずれかで終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="45f97-104">A query expression must terminate with either a `select` clause or a `group` clause without a continuation.</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="98a3e-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="98a3e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="45f97-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="45f97-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="98a3e-106">クエリに [select 句](../../csharp/language-reference/keywords/select-clause.md) または [group 句](../../csharp/language-reference/keywords/group-clause.md) を追加します。</span><span class="sxs-lookup"><span data-stu-id="98a3e-106">Add a [select clause](../../csharp/language-reference/keywords/select-clause.md) or [group clause](../../csharp/language-reference/keywords/group-clause.md) to the query.</span></span>  
+1.  <span data-ttu-id="45f97-106">クエリに [select 句](../../csharp/language-reference/keywords/select-clause.md) または [group 句](../../csharp/language-reference/keywords/group-clause.md) を追加します。</span><span class="sxs-lookup"><span data-stu-id="45f97-106">Add a [select clause](../../csharp/language-reference/keywords/select-clause.md) or [group clause](../../csharp/language-reference/keywords/group-clause.md) to the query.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="98a3e-107">例</span><span class="sxs-lookup"><span data-stu-id="98a3e-107">Example</span></span>  
- <span data-ttu-id="98a3e-108">次のコードでは CS0742 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="98a3e-108">The following code generates CS0742:</span></span>  
+## <a name="example"></a><span data-ttu-id="45f97-107">例</span><span class="sxs-lookup"><span data-stu-id="45f97-107">Example</span></span>  
+ <span data-ttu-id="45f97-108">次のコードでは CS0742 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="45f97-108">The following code generates CS0742:</span></span>  
   
 ```csharp  
 // cs0742.cs  
@@ -45,7 +39,7 @@ public class Test
 }  
 ```  
   
- <span data-ttu-id="98a3e-109">`group` 句で [into](../../csharp/language-reference/keywords/into.md) キーワードを使用して、一時識別子にグループ化の結果を格納する場合は、この句をクエリの最後の句にすることはできません。</span><span class="sxs-lookup"><span data-stu-id="98a3e-109">If the `group` clause uses the [into](../../csharp/language-reference/keywords/into.md) keyword to store the results of the grouping into a temporary identifier, it cannot be the last clause in a query.</span></span> <span data-ttu-id="98a3e-110">`select` 句または 2 番目の `group` 句が必要です。</span><span class="sxs-lookup"><span data-stu-id="98a3e-110">A `select` or second `group` clause is still required.</span></span>  
+ <span data-ttu-id="45f97-109">`group` 句で [into](../../csharp/language-reference/keywords/into.md) キーワードを使用して、一時識別子にグループ化の結果を格納する場合は、この句をクエリの最後の句にすることはできません。</span><span class="sxs-lookup"><span data-stu-id="45f97-109">If the `group` clause uses the [into](../../csharp/language-reference/keywords/into.md) keyword to store the results of the grouping into a temporary identifier, it cannot be the last clause in a query.</span></span> <span data-ttu-id="45f97-110">`select` 句または 2 番目の `group` 句が必要です。</span><span class="sxs-lookup"><span data-stu-id="45f97-110">A `select` or second `group` clause is still required.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="98a3e-111">参照</span><span class="sxs-lookup"><span data-stu-id="98a3e-111">See Also</span></span>  
- [<span data-ttu-id="98a3e-112">LINQ クエリ式</span><span class="sxs-lookup"><span data-stu-id="98a3e-112">LINQ Query Expressions</span></span>](../../csharp/programming-guide/linq-query-expressions/index.md)
+## <a name="see-also"></a><span data-ttu-id="45f97-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="45f97-111">See Also</span></span>  
+ [<span data-ttu-id="45f97-112">LINQ クエリ式</span><span class="sxs-lookup"><span data-stu-id="45f97-112">LINQ Query Expressions</span></span>](../../csharp/programming-guide/linq-query-expressions/index.md)
