--- a/docs/csharp/misc/cs1580.md
+++ b/docs/csharp/misc/cs1580.md
@@ -1,30 +1,24 @@
 ---
-title: "コンパイラの警告 (レベル 1) CS1580"
+title: コンパイラの警告 (レベル 1) CS1580
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-csharp
-ms.topic: article
 f1_keywords:
 - CS1580
 helpviewer_keywords:
 - CS1580
 ms.assetid: ffd1b6d7-6cab-47e3-b7fe-c79cb435cddf
-caps.latest.revision: 
-author: BillWagner
-ms.author: wiwagn
-ms.openlocfilehash: 1f8623db6bc5c3ff9fb848b6506e96cacec953d9
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
-ms.translationtype: MT
+ms.openlocfilehash: 93e10c59c84c412129ea93af7997fa924e1dc7c3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33312527"
 ---
-# <a name="compiler-warning-level-1-cs1580"></a><span data-ttu-id="06b7d-102">コンパイラの警告 (レベル 1) CS1580</span><span class="sxs-lookup"><span data-stu-id="06b7d-102">Compiler Warning (level 1) CS1580</span></span>
-<span data-ttu-id="06b7d-103">XML コメントの cref 属性のパラメーター 'parameter number' の型が無効です</span><span class="sxs-lookup"><span data-stu-id="06b7d-103">Invalid type for parameter 'parameter number' in XML comment cref attribute</span></span>  
+# <a name="compiler-warning-level-1-cs1580"></a><span data-ttu-id="b1739-102">コンパイラの警告 (レベル 1) CS1580</span><span class="sxs-lookup"><span data-stu-id="b1739-102">Compiler Warning (level 1) CS1580</span></span>
+<span data-ttu-id="b1739-103">XML コメントの cref 属性のパラメーター 'parameter number' の型が無効です</span><span class="sxs-lookup"><span data-stu-id="b1739-103">Invalid type for parameter 'parameter number' in XML comment cref attribute</span></span>  
   
- <span data-ttu-id="06b7d-104">メソッドのオーバーロード形式を参照するときに、コンパイラが構文エラーを検出しました。</span><span class="sxs-lookup"><span data-stu-id="06b7d-104">When attempting to reference an overload form of a method, the compiler detected a syntax error.</span></span> <span data-ttu-id="06b7d-105">通常、これは型ではなくパラメーター名が指定されたことを示します。</span><span class="sxs-lookup"><span data-stu-id="06b7d-105">Typically, this indicates that the parameter name, and not the type, was specified.</span></span> <span data-ttu-id="06b7d-106">形式が正しくない行は、生成された XML ファイルに表示されます。</span><span class="sxs-lookup"><span data-stu-id="06b7d-106">A malformed line will appear in the generated XML file.</span></span>  
+ <span data-ttu-id="b1739-104">メソッドのオーバーロード形式を参照するときに、コンパイラが構文エラーを検出しました。</span><span class="sxs-lookup"><span data-stu-id="b1739-104">When attempting to reference an overload form of a method, the compiler detected a syntax error.</span></span> <span data-ttu-id="b1739-105">通常、これは型ではなくパラメーター名が指定されたことを示します。</span><span class="sxs-lookup"><span data-stu-id="b1739-105">Typically, this indicates that the parameter name, and not the type, was specified.</span></span> <span data-ttu-id="b1739-106">形式が正しくない行は、生成された XML ファイルに表示されます。</span><span class="sxs-lookup"><span data-stu-id="b1739-106">A malformed line will appear in the generated XML file.</span></span>  
   
- <span data-ttu-id="06b7d-107">次の例では CS1580 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="06b7d-107">The following sample generates CS1580:</span></span>  
+ <span data-ttu-id="b1739-107">次の例では CS1580 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="b1739-107">The following sample generates CS1580:</span></span>  
   
 ```csharp  
 // CS1580.cs  
