--- a/docs/csharp/misc/cs0138.md
+++ b/docs/csharp/misc/cs0138.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 970545f8-5ee5-428e-921a-3aa29f68d16d
 ms.openlocfilehash: 70d78c9de27f800b00d49b8a9ecefb4025647a2a
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285929"
 ---
 # <a name="compiler-error-cs0138"></a>コンパイラ エラー CS0138
 using namespace ディレクティブは名前空間に対してのみ使用できます。'type' は名前空間ではなく型です。  
