--- a/docs/csharp/misc/cs0182.md
+++ b/docs/csharp/misc/cs0182.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: a9e97bb8-f06e-499f-aadf-26abc2082f98
 ms.openlocfilehash: 59a36e41b2d795452bf46dd94090c21d24485c44
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33284863"
 ---
 # <a name="compiler-error-cs0182"></a>コンパイラ エラー CS0182
 属性引数は、定数式、typeof 式、または属性パラメーター型の配列の作成式でなければなりません。  
