--- a/docs/csharp/language-reference/compiler-messages/cs0834.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0834.md
@@ -11,6 +11,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33216328"
 ---
 # <a name="compiler-error-cs0834"></a>コンパイラ エラー CS0834
 ステートメント本体を含むラムダ式は、式ツリーに変換できません。  
