--- a/docs/csharp/misc/cs0101.md
+++ b/docs/csharp/misc/cs0101.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: edb5246b-c16b-4845-bb2d-0ef769d014c7
 ms.openlocfilehash: 8824ce4d1c0b81db2bd5b6dcd4cfe93aae45555d
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279907"
 ---
 # <a name="compiler-error-cs0101"></a>コンパイラ エラー CS0101
 名前空間 'namespace' に 'type' の定義が既に含まれています  
