--- a/docs/csharp/misc/cs0105.md
+++ b/docs/csharp/misc/cs0105.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 96d1d5d7-79e9-424f-bbde-f87e88b70003
 ms.openlocfilehash: 41d01f073cd20aeabaf0e683ec2687407917af91
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33274821"
 ---
 # <a name="compiler-warning-level-3-cs0105"></a>コンパイラの警告 (レベル 3) CS0105
 'namespace' の using ディレクティブは、この名前空間で既に使用されています。  
