--- a/docs/csharp/misc/cs0119.md
+++ b/docs/csharp/misc/cs0119.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 048924f1-378f-4021-bd20-299d3218f810
 ms.openlocfilehash: 09c746cffffba90c59f916301cfe1c1132cd4c36
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33279933"
 ---
 # <a name="compiler-error-cs0119"></a>コンパイラ エラー CS0119
 'construct1_name' は 'construct1' ですが、指定されたコンテキストでは有効ではありません  
