--- a/docs/csharp/misc/cs0171.md
+++ b/docs/csharp/misc/cs0171.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 8c1d76c9-1048-4579-9031-23e3566e6288
 ms.openlocfilehash: 00d70f4b1cec85b0e4a16cdbf8f2a2bf6f33a01d
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282312"
 ---
 # <a name="compiler-error-cs0171"></a>コンパイラ エラー CS0171
 自動的に実装されたプロパティ 'name' のバッキング フィールドは、コントロールが呼び出し元に返される前に完全に割り当てられている必要があります。 コンストラクター初期化子から既定のコンストラクターを呼び出すことをご検討ください。  
