--- a/docs/csharp/misc/cs0218.md
+++ b/docs/csharp/misc/cs0218.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: f675e06a-c55c-44a1-b5db-0df178fd8f79
 ms.openlocfilehash: 484a14060b33083e902cf28e52354831a969467c
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33286212"
 ---
 # <a name="compiler-error-cs0218"></a>コンパイラ エラー CS0218
 型 ('type') に演算子 true および演算子 false の宣言が含まれている必要があります  
