--- a/docs/csharp/misc/cs0220.md
+++ b/docs/csharp/misc/cs0220.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: f520bf34-bff8-4796-882b-1a9b1d5b977c
 ms.openlocfilehash: b66f6e55a0dfdb577a444f05857eb3bc2d8012f5
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33282926"
 ---
 # <a name="compiler-error-cs0220"></a>コンパイラ エラー CS0220
 この操作はチェック モードでコンパイルしたときにオーバーフローします。  
