--- a/docs/csharp/misc/cs0251.md
+++ b/docs/csharp/misc/cs0251.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 791a325a-096d-4d87-b31d-d9b3124210c8
 ms.openlocfilehash: 4789f821ec585aa374ff619de1c924c699e26ffc
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33271332"
 ---
 # <a name="compiler-warning-level-2-cs0251"></a>コンパイラの警告 (レベル 2) CS0251
 負のインデックスで配列します。配列は常にゼロからの開始を示します。  
