--- a/docs/csharp/misc/cs0458.md
+++ b/docs/csharp/misc/cs0458.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 0986c620-b4bc-4e4b-976f-88359cfa3a45
 ms.openlocfilehash: f642fa7d4eec80ace8175384597caa70b831c0c8
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33284577"
 ---
 # <a name="compiler-warning-level-2-cs0458"></a>コンパイラの警告 (レベル 2) CS0458
 式の結果は常に型 'type name' の 'null' になります。  
