--- a/docs/csharp/misc/cs0508.md
+++ b/docs/csharp/misc/cs0508.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 28403573-6e64-4496-918d-fb50c8851e51
 ms.openlocfilehash: 7a20827e62cf75d39a961aa05b92902c9c19783e
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33285942"
 ---
 # <a name="compiler-error-cs0508"></a>コンパイラ エラー CS0508
 'Type 1': オーバーライドされたメンバー 'Member Name' に対応するために、戻り値の型は 'Type 2' でなければなりません  
